--- a/stories/ko/0027_결정_slides.html
+++ b/stories/ko/0027_결정_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
-<p>많이 아이들이 학교를 빠졌어요.</p>
+<p>많은 아이들이 학교를 빠졌어요.</p>
 <center>
 <strong>4</strong>
 </center>
