--- a/stories/ko/0066_노자벨레와-세-머리카락.html
+++ b/stories/ko/0066_노자벨레와-세-머리카락.html
@@ -105,7 +105,7 @@ Tessa Welch<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
 
-<p>그리곤 개가 “침대를 정리해줘!”라고 말했어요. “전 개를 위해 침대를 정리해준 적이 없어요,” 노지벨레가 답했어요. “침대를 정리해줘, 아니면 물어버릴꺼야!” 개가 말했어요. 그래서 노지벨레는 침대를 정리했어요.</p>
+<p>그리곤 개가 “침대를 정리해줘!”라고 말했어요. “전 개를 위해 침대를 정리해준 적이 없어요,” 노지벨레가 대답했어요. “침대를 정리해줘, 아니면 물어버릴꺼야!” 개가 말했어요. 그래서 노지벨레는 침대를 정리했어요.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
