--- a/stories/ko/0066_노자벨레와-세-머리카락_slides.html
+++ b/stories/ko/0066_노자벨레와-세-머리카락_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>그리곤 개가 &quot;침대를 정리해줘!&quot;라고 말했어요. &quot;전 개를 위해 침대를 정리해준 적이 없어요,&quot; 노지벨레가 답했어요. &quot;침대를 정리해줘, 아니면 물어버릴꺼야!&quot; 개가 말했어요. 그래서 노지벨레는 침대를 정리했어요.</p>
+<p>그리곤 개가 &quot;침대를 정리해줘!&quot;라고 말했어요. &quot;전 개를 위해 침대를 정리해준 적이 없어요,&quot; 노지벨레가 대답했어요. &quot;침대를 정리해줘, 아니면 물어버릴꺼야!&quot; 개가 말했어요. 그래서 노지벨레는 침대를 정리했어요.</p>
 <center>
 <strong>9</strong>
 </center>
