--- a/stories/ko/0072_꿀잡이새의-복수.html
+++ b/stories/ko/0072_꿀잡이새의-복수.html
@@ -56,14 +56,14 @@ Zulu folktale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
 
-<p>삼십분 후, 그들은 거대한 야생 무화과 나무에 도달했습니다. 네게데는 미친 듯이 가지 위를 뛰어 다녔어요. 그는 그 한 가지 위에 정착하고, 그의 머리를 숙여 진질레 에게 말했어요, “여깄다! 이리 오세요! 왜이렇게 오래 걸려요?” 진질레는 나무 아래에서 꿀벌을 하나도 볼 수 없었지만, 네게데를 믿었어요.</p>
+<p>삼십분 후, 그들은 거대한 야생 무화과 나무에 도달했습니다. 네게데는 미친 듯이 가지 위를 뛰어 다녔어요. 그는 그 한 가지 위에 정착하고, 그의 머리를 숙여 진질레 에게 말했어요, “여깄다! 이리로 오세요! 왜이렇게 오래 걸려요?” 진질레는 나무 아래에서 꿀벌을 하나도 볼 수 없었지만, 네게데를 믿었어요.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
 
-<p>진질레는 나무 아래에서 그의  사냥 창을 내려 놓고, 마른 나뭇 가지를 모아 작은 불을 만들었어요. 불에 잘 타고 있을 때, 그는 긴 마른 막대기를 불꽃 중심에 넣었어요. 그 나무는 탈때 특히 연기를 많이 내기로 알려져 있었어요. 진질레는 식은 나무를 입에 물고 나무를 오르기 시작했어요.</p>
+<p>진질레는 나무 아래에서 그의 사냥 창을 내려 놓고, 마른 나뭇 가지를 모아 작은 불을 만들었어요. 불에 잘 타고 있을 때, 그는 긴 마른 막대기를 불꽃 중심에 넣었어요. 그 나무는 탈때 특히 연기를 많이 내기로 알려져 있었어요. 진질레는 식은 나무를 입에 물고 나무를 오르기 시작했어요.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Zulu folktale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
 
-<p>레오파드가  진질레를 공격하기 전에, 진질레는 나무 아래로 돌진했어요. 그가 너무 서둘러서 그의 나뭇가지를 놓치고, 무거운 쿵 소리와 함께 떨어질 때,그의 발목이 뒤틀렸어요. 그는 빨리 다리를 절며 뛰어 갔어요. 다행히도, 표범은 그를 쫓아 가기에는 아직 너무 졸렸어요. 네게데, 그 벌꿀 길잡이 새는 그의 복수를했고 진질레는 그의 교훈을 배웠습니다.</p>
+<p>레오파드가 진질레를 공격하기 전에, 진질레는 나무 아래로 돌진했어요. 그가 너무 서둘러서 그의 나뭇가지를 놓치고, 무거운 쿵 소리와 함께 떨어질 때,그의 발목이 뒤틀렸어요. 그는 빨리 다리를 절며 뛰어 갔어요. 다행히도, 표범은 그를 쫓아 가기에는 아직 너무 졸렸어요. 네게데, 그 벌꿀 길잡이 새는 그의 복수를했고 진질레는 그의 교훈을 배웠습니다.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
