--- a/stories/ko/0072_꿀잡이새의-복수_slides.html
+++ b/stories/ko/0072_꿀잡이새의-복수_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
-<p>삼십분 후, 그들은 거대한 야생 무화과 나무에 도달했습니다. 네게데는 미친 듯이 가지 위를 뛰어 다녔어요. 그는 그 한 가지 위에 정착하고, 그의 머리를 숙여 진질레 에게 말했어요, &quot;여깄다! 이리 오세요! 왜이렇게 오래 걸려요?&quot; 진질레는 나무 아래에서 꿀벌을 하나도 볼 수 없었지만, 네게데를 믿었어요.</p>
+<p>삼십분 후, 그들은 거대한 야생 무화과 나무에 도달했습니다. 네게데는 미친 듯이 가지 위를 뛰어 다녔어요. 그는 그 한 가지 위에 정착하고, 그의 머리를 숙여 진질레 에게 말했어요, &quot;여깄다! 이리로 오세요! 왜이렇게 오래 걸려요?&quot; 진질레는 나무 아래에서 꿀벌을 하나도 볼 수 없었지만, 네게데를 믿었어요.</p>
 <center>
 <strong>2</strong>
 </center>
