--- a/stories/ko/0234_축구-스타-안디스와-.html
+++ b/stories/ko/0234_축구-스타-안디스와-.html
@@ -63,7 +63,7 @@ Eden Daniels<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p>남자아이들은 그녀에게 가서 네트볼을 하라고 말했어요. 네트볼은 여자아이들은 위한 것이고 축구는 남자아이들을 위한 것이라고 말했어요. 안디스와는 속상했어요.</p>
+<p>남자아이들은 그녀에게 가서 네트볼을 하라고 말했어요. 네트볼은 여자아이들을 위한 것이고 축구는 남자아이들을 위한 것이라고 말했어요. 안디스와는 속상했어요.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
