--- a/stories/ko/0243_할머니와-함께하는-휴가_slides.html
+++ b/stories/ko/0243_할머니와-함께하는-휴가_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>오돈고와 아피요는 너무 신났습니다 왜냐하면 또 할머니를 뵐 수 있었기 때문입니다. 그 전날 밤, 그들은 짐을 쌓고 할머니의 마을로 가는 긴여행을 위해 준비했습니다. 그날 밤 오돈고와 아피요는 다음날의 여행에 대해 얘기 하느라 잠도 자지 않았습니다.</p>
+<p>오돈고와 아피요는 너무 신났습니다 왜냐하면 또 할머니를 뵐 수 있었기 때문입니다. 그 전날 밤, 그들은 짐을 싸서 할머니의 마을로 가는 긴여행을 위해 준비했습니다. 그날 밤 오돈고와 아피요는 다음날의 여행에 대해 얘기 하느라 잠도 자지 않았습니다.</p>
 <center>
 <strong>2</strong>
 </center>
