--- a/stories/ko/0262_마고즈위_slides.html
+++ b/stories/ko/0262_마고즈위_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
-<p>추운 어느날이였습니다. 마고즈위는 길가에 서서 구걸을 하고 있었습니다. 그런데 어떤 남자 한분이 오셔서 말을 하셨습니다, &quot;안녕, 나는 토마스라고해. 난 네가 음식을 먹을 수 있는곳, 저기서 일하는 사람이야.&quot; 그 남자는 노란색 벽에 파란지붕집을 향해 가르켰습니다. &quot;너 저기 가서 밥 먹을래?&quot; 라고 물어봤습니다. 마고즈위는 그 남자분을 한번 보고, 그리고 집을 쳐다보았습니다. 그리고 마즈고위는 &quot;언젠가는요,&quot; 라고 대답을 하고 걸어갔습니다.</p>
+<p>추운 어느날이였습니다. 마고즈위는 길가에 서서 구걸을 하고 있었습니다. 그런데 어떤 한 남자분이 오셔서 말을 하셨습니다, &quot;안녕, 나는 토마스라고해. 난 네가 음식을 먹을 수 있는곳, 저기서 일하는 사람이야.&quot; 그 남자는 노란색 벽에 파란지붕집을 향해 가르켰습니다. &quot;너 저기 가서 밥 먹을래?&quot; 라고 물어봤습니다. 마고즈위는 그 남자분을 한번 보고, 그리고 집을 쳐다보았습니다. 그리고 마즈고위는 &quot;언젠가는요,&quot; 라고 대답을 하고 걸어갔습니다.</p>
 <center>
 <strong>7</strong>
 </center>
