--- a/stories/ko/0291_부시의-누나가-말한-것.html
+++ b/stories/ko/0291_부시의-누나가-말한-것.html
@@ -49,14 +49,14 @@ Nina Orange<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
 
-<p>한 이른 아침 부시의 할머니가  그를 불렀어요. “부시야, 이 달걀을 부모님한테 가져다 드리렴. 네 누나의 결혹시을 위해 큰 케익을 만들고 싶어하실거야.”</p>
+<p>한 이른 아침 부시의 할머니가 그를 불렀어요. “부시야, 이 달걀을 부모님한테 가져다 드리렴. 네 누나의 결혼식을 위해 큰 케익을 만들고 싶어하실거야.”</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
 
-<p>부모님께로 가는 길에, 부시는 과일을 따는 두 소년을 만났아요. 한 소년은 부시의 달걀을  잡아 나무로 던졌어요. 달걀은 깨졌어요.</p>
+<p>부모님께로 가는 길에, 부시는 과일을 따는 두 소년을 만났어요. 한 소년은 부시의 달걀을 잡아 나무로 던졌어요. 달걀은 깨졌어요.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Nina Orange<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
 
-<p>인부들은 지팡이를 부러뜨린 것에 대해 미안하게 생각했어요. “케익을 도와줄 순 없지만, 여기 누나를 위한 짚단이 있다,” 한 남자가 말했어요. 그래서 부시는 여행을 계속했어요.</p>
+<p>인부들은 지팡이를 부러뜨린 것에 대해 미안하게 생각했어요. “케익을 도와줄 순 없지만, 여기 누나를 위한 짚단이 있단다,” 한 남자가 말했어요. 그래서 부시는 여행을 계속했어요.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Nina Orange<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
 
-<p>“어떡하면 좋지?” 부시가 외쳤어요.  “달아난 소는 인부들이 준 짚단을 대신한 선물이었어. 인부들이 지팡이를 부러뜨렸기 때문에 그 짚단을 준거야. 과일 따는 아이들이 케익을 위한 달걀을 깨뜨렸기 때문에 그 지팡이를 준거구. 그 케익은 누나의 결혼식을 위한 거였어. 이제 달걀도, 케익도, 선물도 없어.”</p>
+<p>“어떡하면 좋지?” 부시가 외쳤어요. “달아난 소는 인부들이 준 짚단을 대신한 선물이었어. 인부들이 지팡이를 부러뜨렸기 때문에 그 짚단을 준거야. 과일 따는 아이들이 케익을 위한 달걀을 깨뜨렸기 때문에 그 지팡이를 준거구. 그 케익은 누나의 결혼식을 위한 거였어. 이제 달걀도, 케익도, 선물도 없어.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
