--- a/stories/ko/0291_부시의-누나가-말한-것_slides.html
+++ b/stories/ko/0291_부시의-누나가-말한-것_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
-<p>한 이른 아침 부시의 할머니가 그를 불렀어요. &quot;부시야, 이 달걀을 부모님한테 가져다 드리렴. 네 누나의 결혹시을 위해 큰 케익을 만들고 싶어하실거야.&quot;</p>
+<p>한 이른 아침 부시의 할머니가 그를 불렀어요. &quot;부시야, 이 달걀을 부모님한테 가져다 드리렴. 네 누나의 결혼식을 위해 큰 케익을 만들고 싶어하실거야.&quot;</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
-<p>부모님께로 가는 길에, 부시는 과일을 따는 두 소년을 만났아요. 한 소년은 부시의 달걀을 잡아 나무로 던졌어요. 달걀은 깨졌어요.</p>
+<p>부모님께로 가는 길에, 부시는 과일을 따는 두 소년을 만났어요. 한 소년은 부시의 달걀을 잡아 나무로 던졌어요. 달걀은 깨졌어요.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>인부들은 지팡이를 부러뜨린 것에 대해 미안하게 생각했어요. &quot;케익을 도와줄 순 없지만, 여기 누나를 위한 짚단이 있다,&quot; 한 남자가 말했어요. 그래서 부시는 여행을 계속했어요.</p>
+<p>인부들은 지팡이를 부러뜨린 것에 대해 미안하게 생각했어요. &quot;케익을 도와줄 순 없지만, 여기 누나를 위한 짚단이 있단다,&quot; 한 남자가 말했어요. 그래서 부시는 여행을 계속했어요.</p>
 <center>
 <strong>7</strong>
 </center>
