--- a/stories/ko/0294_할머니의-바나나들_slides.html
+++ b/stories/ko/0294_할머니의-바나나들_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>다음 날 할머니가 어머니를 뵈러 오셨을때, 저는 할머니 집에 가서 바나나들을 한번 더 확인 했어요. 너무나도 잘 익은 바나나들이 많이 있었어요. 저는 하나를 주워서 제 치마 속으로 넣었어요. 그 바구니를 다시 덮고, 집 뒤로 와서 가지고 온 바나나를 빨리 먹었어요. 제가 맛본 바나나 중 가장 달았어요.</p>
+<p>다음 날 할머니가 어머니를 뵈러 오셨을때, 저는 할머니 집에 가서 바나나들을 한번 더 확인 했어요. 너무나도 잘 익은 바나나들이 많이 있었어요. 저는 하나를 주워서 제 치마 속으로 넣었어요. 그 바구니를 다시 덮고, 집 뒤로 와서 가지고 온 바나나를 빨리 먹었어요. 제가 맛본 바나나 중에 가장 달았어요.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>그날 밤, 저는 엄마아빠 그리고 할머니에게로 부터 불려갔어요. 저는 제가 왜 불려갔는지 알았어요. 그날 밤 제가 자려고 누웠을 때, 다시는 훔쳐서는 안된다고 생각했어요. 할머니에게서도, 부모님에게서도, 그리고 확실히 누구한테서도요.</p>
+<p>그날 밤, 저는 엄마아빠 그리고 할머니에게로 부터 불려갔어요. 저는 제가 왜 불려갔는지 알아요. 그날 밤 제가 자려고 누웠을 때, 다시는 훔쳐서는 안된다고 생각했어요. 할머니에게서도, 부모님에게서도, 그리고 확실히 누구한테서도요.</p>
 <center>
 <strong>10</strong>
 </center>
