--- a/stories/ko/0342_벌_slides.html
+++ b/stories/ko/0342_벌_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>우린 라힘에게 화가 났어요. 하지만 라힘은 미안하지 않아요.</p>
+<p>우린 라힘에게 화가 났어요. 하지만 라힘은 미안해하지 않아요.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>엄마는 이럴 줄 알으셨어요. 과일이 라힘을 벌주고 있어요!</p>
+<p>엄마는 이럴 줄 아셨어요. 과일이 라힘을 벌주고 있어요!</p>
 <center>
 <strong>11</strong>
 </center>
