--- a/stories/pa/0004_ਬੱਕਰੀ-ਕੁੱਤਾ-ਅਤੇ-ਗਾਂ_slides.html
+++ b/stories/pa/0004_ਬੱਕਰੀ-ਕੁੱਤਾ-ਅਤੇ-ਗਾਂ_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>ਅਤੇ ਗਾਂ ਨੂੰ ਕੋਈ ਪਰੇਸ਼ਾਨੀ ਨਹੀਂ ਹੁੰਦੀ ਜਦ ਕਾਰ ਆਉਂਦੀ ਹੈI ਉਹ ਸੜਕ ਪਾਰ ਕਰਨ ਵਿੱਚ ਆਪਣਾ ਸਮਾਂ ਲਾਉਂਦੀ ਹੈ ਕਿਉਂਕਿ ਉਸਨੂੰ ਪਤਾ ਹੈ ਕਿ ਉਸਨੇ ਪੂਰਾ ਕਿਰਾਇਆ ਦਿੱਤਾ ਹੈ।</p>
+<p>ਅਤੇ ਗਾਂ ਨੂੰ ਕੋਈ ਪਰੇਸ਼ਾਨੀ ਨਹੀਂ ਹੁੰਦੀ ਜਦ ਕਾਰ ਆਉਂਦੀ ਹੈ। ਉਹ ਸੜਕ ਪਾਰ ਕਰਨ ਵਿੱਚ ਆਪਣਾ ਸਮਾਂ ਲਾਉਂਦੀ ਹੈ ਕਿਉਂਕਿ ਉਸਨੂੰ ਪਤਾ ਹੈ ਕਿ ਉਸਨੇ ਪੂਰਾ ਕਿਰਾਇਆ ਦਿੱਤਾ ਹੈ।</p>
 <center>
 <strong>8</strong>
 </center>
