--- a/stories/pa/0030_ਭਾਵਨਾਵਾਂ.html
+++ b/stories/pa/0030_ਭਾਵਨਾਵਾਂ.html
@@ -49,7 +49,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>ਪੰਜਾਬੀ</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
-<p>ਮੇਰਾ ਦਿਲ ਬਹੁਤ ਕੁਝ ਮਹਿਸੂਸ ਕਰਦਾ ਹੈI</p>
+<p>ਮੇਰਾ ਦਿਲ ਬਹੁਤ ਕੁਝ ਮਹਿਸੂਸ ਕਰਦਾ ਹੈ।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
