--- a/stories/pa/0030_ਭਾਵਨਾਵਾਂ_slides.html
+++ b/stories/pa/0030_ਭਾਵਨਾਵਾਂ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p>ਮੇਰਾ ਦਿਲ ਬਹੁਤ ਕੁਝ ਮਹਿਸੂਸ ਕਰਦਾ ਹੈI</p>
+<p>ਮੇਰਾ ਦਿਲ ਬਹੁਤ ਕੁਝ ਮਹਿਸੂਸ ਕਰਦਾ ਹੈ।</p>
 <center>
 <strong>1</strong>
 </center>
