--- a/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ.html
+++ b/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ.html
@@ -77,7 +77,7 @@ Rukia Nantale<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
 
-<p>ਕੁਝ ਮਹੀਨੇ ਬਾਅਦ, ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਨੇ ਉਹਨ੍ਹਾਂ ਨੂੰ ਦੱਸਿਆ ਕਿ ਉਹ ਕੁਝ ਦੇਰ ਲਈ ਘਰ ਤੋਂ ਬਾਹਰ ਰਹੇਗਾ। “ਮੈਨੂੰ ਮੇਰੇ ਕੰਮ ਲਈ ਸਫ਼ਰ ਕਰਨਾ ਪਵੇਗਾ,” ਉਸ ਨੇ ਕਿਹਾ। “ਪਰ ਮੈਨੂੰ ਪਤਾ ਹੈ ਕਿ ਤੁਸੀਂ ਇਕ-ਦੂਜੇ ਦੀ ਦੇਖ-ਭਾਲ ਕਰੋਗੇ।” ਸਿਮਬੇਗਵਾਇਰ ਉਦਾਸ ਹੋਈ ਪਰ ਉਸ ਦੇ ਪਿਤਾ ਨੇ ਨੋਟਿਸ ਨਹੀਂ ਕੀਤਾ। ਅਨੀਤਾ ਨੇ ਕੁਝ ਨਹੀਂ ਕਿਹਾ। ਉਹ ਵੀ ਖੁਸ਼ ਨਹੀ ਸੀl</p>
+<p>ਕੁਝ ਮਹੀਨੇ ਬਾਅਦ, ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਨੇ ਉਹਨ੍ਹਾਂ ਨੂੰ ਦੱਸਿਆ ਕਿ ਉਹ ਕੁਝ ਦੇਰ ਲਈ ਘਰ ਤੋਂ ਬਾਹਰ ਰਹੇਗਾ। “ਮੈਨੂੰ ਮੇਰੇ ਕੰਮ ਲਈ ਸਫ਼ਰ ਕਰਨਾ ਪਵੇਗਾ,” ਉਸ ਨੇ ਕਿਹਾ। “ਪਰ ਮੈਨੂੰ ਪਤਾ ਹੈ ਕਿ ਤੁਸੀਂ ਇਕ-ਦੂਜੇ ਦੀ ਦੇਖ-ਭਾਲ ਕਰੋਗੇ।” ਸਿਮਬੇਗਵਾਇਰ ਉਦਾਸ ਹੋਈ ਪਰ ਉਸ ਦੇ ਪਿਤਾ ਨੇ ਨੋਟਿਸ ਨਹੀਂ ਕੀਤਾ। ਅਨੀਤਾ ਨੇ ਕੁਝ ਨਹੀਂ ਕਿਹਾ। ਉਹ ਵੀ ਖੁਸ਼ ਨਹੀ ਸੀ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
