--- a/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ.html
+++ b/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ.html
@@ -63,7 +63,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
 
-<p>ਖਲਾਈ ਸਕੂਲ ਨੂੰ ਚੱਲ ਕੇ ਜਾਂਦੀ ਹੈ। ਰਾਹ ਵਿੱਚ, ਉਹ ਘਾਹ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। “ਘਾਹ, ਕਿਰਪਾ ਕਰਕੇ ਤੁਸੀਂ ਹੋਰ ਹਰਿਆਲੀ ਪਾਉਂ ਅਤੇ ਸੁੱਕ ਨਾ ਜਾਇਓ I”</p>
+<p>ਖਲਾਈ ਸਕੂਲ ਨੂੰ ਚੱਲ ਕੇ ਜਾਂਦੀ ਹੈ। ਰਾਹ ਵਿੱਚ, ਉਹ ਘਾਹ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। “ਘਾਹ, ਕਿਰਪਾ ਕਰਕੇ ਤੁਸੀਂ ਹੋਰ ਹਰਿਆਲੀ ਪਾਉਂ ਅਤੇ ਸੁੱਕ ਨਾ ਜਾਇਓ।”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
