--- a/stories/pa/0110_ਇੱਕ-ਨਿੱਕਾ-ਬੀਜ-ਵੰਨਗਾਰੀ-ਮਾਂਥਾਂਈ-ਦੀ-ਕਹਾਣੀ_slides.html
+++ b/stories/pa/0110_ਇੱਕ-ਨਿੱਕਾ-ਬੀਜ-ਵੰਨਗਾਰੀ-ਮਾਂਥਾਂਈ-ਦੀ-ਕਹਾਣੀ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
-<p>ਦਿਨ ਵਿੱਚ ਉਸਦਾ ਪਸੰਦੀਦਾ ਸਮਾਂ ਸੂਰਜ ਡੁੱਬਣ ਤੋਂ ਬਾਅਦ ਸੀI ਜਦ ਪੌਦਿਆਂ ਨੂੰ ਵੇਖਣ ਲਈ ਬਹੁਤ ਹਨੇਰਾ ਹੋ ਜਾਦਾਂ, ਉਦੋਂ ਵੰਨਗਾਰੀ ਨੂੰ ਮਹਿਸੂਸ ਹੁੰਦਾ ਕਿ ਘਰ ਜਾਣ ਦਾ ਸਮਾਂ ਆ ਗਿਆ ਹੈ। ਉਹ ਖੇਤਾਂ ਵਿੱਚਲੇ ਤੰਗ ਰਸਤਿਆਂ ਅਤੇ ਦਰਿਆਵਾਂ ਨੂੰ ਪਾਰ ਕਰਦੀ ਹੋਈ ਜਾਂਦੀ।</p>
+<p>ਦਿਨ ਵਿੱਚ ਉਸਦਾ ਪਸੰਦੀਦਾ ਸਮਾਂ ਸੂਰਜ ਡੁੱਬਣ ਤੋਂ ਬਾਅਦ ਸੀ। ਜਦ ਪੌਦਿਆਂ ਨੂੰ ਵੇਖਣ ਲਈ ਬਹੁਤ ਹਨੇਰਾ ਹੋ ਜਾਦਾਂ, ਉਦੋਂ ਵੰਨਗਾਰੀ ਨੂੰ ਮਹਿਸੂਸ ਹੁੰਦਾ ਕਿ ਘਰ ਜਾਣ ਦਾ ਸਮਾਂ ਆ ਗਿਆ ਹੈ। ਉਹ ਖੇਤਾਂ ਵਿੱਚਲੇ ਤੰਗ ਰਸਤਿਆਂ ਅਤੇ ਦਰਿਆਵਾਂ ਨੂੰ ਪਾਰ ਕਰਦੀ ਹੋਈ ਜਾਂਦੀ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
-<p>ਜਿਨ੍ਹਾਂ ਜਿਆਦਾ ਉਸ ਨੇ ਸਿੱਖਿਆ,ਉਨ੍ਹਾਂ ਜਿਆਦਾ ਉਸ ਨੂੰ ਅਹਿਸਾਸ ਹੋਇਆ ਕਿ ਉਹ ਕੀਨੀਆ ਦੇ ਲੋਕਾਂ ਨੂੰ ਪਿਆਰ ਕਰਦੀ ਹੈ। ਉਹ ਚਾਹੁੰਦੀ ਸੀ ਕਿ ਉਹ ਖੁਸ਼ ਅਤੇ ਅਜ਼ਾਦ ਰਿਹਣ। ਉਸ ਨੇ ਜਿਨ੍ਹਾਂ ਜਿਆਦਾ ਸਿੱਖਿਆ, ਉਸ ਨੂੰ ਉਹਨਾਂ ਜਿਆਦਾ ਆਪਣਾ ਅਫ਼ਰੀਕੀ ਘਰ ਯਾਦ ਆਇਆ।</p>
+<p>ਜਿਨ੍ਹਾਂ ਜਿਆਦਾ ਉਸ ਨੇ ਸਿੱਖਿਆ, ਉਨ੍ਹਾਂ ਜਿਆਦਾ ਉਸ ਨੂੰ ਅਹਿਸਾਸ ਹੋਇਆ ਕਿ ਉਹ ਕੀਨੀਆ ਦੇ ਲੋਕਾਂ ਨੂੰ ਪਿਆਰ ਕਰਦੀ ਹੈ। ਉਹ ਚਾਹੁੰਦੀ ਸੀ ਕਿ ਉਹ ਖੁਸ਼ ਅਤੇ ਅਜ਼ਾਦ ਰਿਹਣ। ਉਸ ਨੇ ਜਿਨ੍ਹਾਂ ਜਿਆਦਾ ਸਿੱਖਿਆ, ਉਸ ਨੂੰ ਉਹਨਾਂ ਜਿਆਦਾ ਆਪਣਾ ਅਫ਼ਰੀਕੀ ਘਰ ਯਾਦ ਆਇਆ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
-<p>ਜਦ ਉਸ ਨੇ ਆਪਣੀ ਪੜ੍ਹਾਈ ਮੁਕੰਮਲ ਕੀਤੀ, ਉਹ ਵਾਪਸ ਕੀਨੀਆ ਪਰਤ ਆਈ। ਪਰ ਉਸ ਦਾ ਦੇਸ਼ ਬਦਲ ਗਿਆ ਸੀ। ਜ਼ਮੀਨ ਤੇ ਵੱਡੇ-ਵੱਡੇ ਫਾਰਮ ਸਨ। ਔਰਤਾਂ ਕੋਲ ਖਾਣਾਂ ਪਕਾਉਣ ਲਈ ਲੱਕੜ ਨਹੀਂ ਸੀ। ਲੋਕ ਗ਼ਰੀਬ ਸਨ ਅਤੇ ਬੱਚੇ ਭੁੱਖੇ ਸਨl</p>
+<p>ਜਦ ਉਸ ਨੇ ਆਪਣੀ ਪੜ੍ਹਾਈ ਮੁਕੰਮਲ ਕੀਤੀ, ਉਹ ਵਾਪਸ ਕੀਨੀਆ ਪਰਤ ਆਈ। ਪਰ ਉਸ ਦਾ ਦੇਸ਼ ਬਦਲ ਗਿਆ ਸੀ। ਜ਼ਮੀਨ ਤੇ ਵੱਡੇ-ਵੱਡੇ ਫਾਰਮ ਸਨ। ਔਰਤਾਂ ਕੋਲ ਖਾਣਾਂ ਪਕਾਉਣ ਲਈ ਲੱਕੜ ਨਹੀਂ ਸੀ। ਲੋਕ ਗ਼ਰੀਬ ਸਨ ਅਤੇ ਬੱਚੇ ਭੁੱਖੇ ਸਨ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
-<p>ਵੰਨਗਾਰੀ ਨੂੰ ਪਤਾ ਸੀ ਕਿ ਕੀ ਕਰਨਾ ਹੈl ਉਸ ਨੇ ਔਰਤਾਂ ਨੂੰ ਬੀਜ ਤੋਂ ਰੁੱਖ ਉਗਾਣੇ ਸਿਖਾਏ। ਔਰਤਾਂ ਨੇ ਰੁੱਖ ਵੇਚੇ ਅਤੇ ਉਹ ਪੈਸੇ ਆਪਣੇ ਪਰਿਵਾਰ ਦੀ ਦੇਖ-ਭਾਲ ਕਰਨ ਲਈ ਵਰਤੇ। ਔਰਤਾਂ ਬਹੁਤ ਖੁਸ਼ ਸਨ। ਵੰਨਗਾਰੀ ਨੇ ਔਰਤਾਂ ਨੂੰ ਸ਼ਕਤੀਸ਼ਾਲੀ ਅਤੇ ਤਾਕਤਵਰ ਮਹਿਸੂਸ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕੀਤੀI</p>
+<p>ਵੰਨਗਾਰੀ ਨੂੰ ਪਤਾ ਸੀ ਕਿ ਕੀ ਕਰਨਾ ਹੈ। ਉਸ ਨੇ ਔਰਤਾਂ ਨੂੰ ਬੀਜ ਤੋਂ ਰੁੱਖ ਉਗਾਣੇ ਸਿਖਾਏ। ਔਰਤਾਂ ਨੇ ਰੁੱਖ ਵੇਚੇ ਅਤੇ ਉਹ ਪੈਸੇ ਆਪਣੇ ਪਰਿਵਾਰ ਦੀ ਦੇਖ-ਭਾਲ ਕਰਨ ਲਈ ਵਰਤੇ। ਔਰਤਾਂ ਬਹੁਤ ਖੁਸ਼ ਸਨ। ਵੰਨਗਾਰੀ ਨੇ ਔਰਤਾਂ ਨੂੰ ਸ਼ਕਤੀਸ਼ਾਲੀ ਅਤੇ ਤਾਕਤਵਰ ਮਹਿਸੂਸ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕੀਤੀ।</p>
 <center>
 <strong>9</strong>
 </center>
