--- a/stories/pa/0156_ਭੁੱਖਾ-ਮਗਰਮੱਛ.html
+++ b/stories/pa/0156_ਭੁੱਖਾ-ਮਗਰਮੱਛ.html
@@ -56,7 +56,7 @@ Christian G.<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
 
-<p>ਉਹ ਹੌਲੀ ਹੌਲੀ ਅਤੇ ਚੁੱਪ-ਚਾਪ ਭੋਜਨ ਦੀ ਖੋਜ ਕਰਦਾ ਸੀI ਅਤੇ ਫਿਰ…</p>
+<p>ਉਹ ਹੌਲੀ ਹੌਲੀ ਅਤੇ ਚੁੱਪ-ਚਾਪ ਭੋਜਨ ਦੀ ਖੋਜ ਕਰਦਾ ਸੀ। ਅਤੇ ਫਿਰ…</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,14 +70,14 @@ Christian G.<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p>ਉਸ ਤੋਂ ਬਾਅਦ, ਉਸ ਦੀ ਭੁੱਖ ਮਿਟ ਜਾਂਦੀ ਹੈ ਅਤੇ ਉਹ ਖੁਸ਼ ਹੋ ਜਾਂਦਾ ਹੈI</p>
+<p>ਉਸ ਤੋਂ ਬਾਅਦ, ਉਸ ਦੀ ਭੁੱਖ ਮਿਟ ਜਾਂਦੀ ਹੈ ਅਤੇ ਉਹ ਖੁਸ਼ ਹੋ ਜਾਂਦਾ ਹੈ।</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
 
-<p>ਜਦ ਤੱਕ ਉਸ ਨੂੰ ਦੋਬਾਰਾ ਭੁੱਖ ਨਹੀਂ ਲੱਗਦੀI</p>
+<p>ਜਦ ਤੱਕ ਉਸ ਨੂੰ ਦੋਬਾਰਾ ਭੁੱਖ ਨਹੀਂ ਲੱਗਦੀ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
