--- a/stories/pa/0201_ਗਧਾ-ਬੱਚਾ_slides.html
+++ b/stories/pa/0201_ਗਧਾ-ਬੱਚਾ_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>ਸਾਰੇ ਬਹਿਸ ਕਰਨ ਲੱਗ ਪਏ। &quot;ਅਸੀਂ ਕਿਹਾ ਸੀ ਕਿ ਆਪਾਂ ਮਾਂ ਅਤੇ ਬੱਚੇ ਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗੇ ਅਤੇ ਆਪਾਂ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗੇ,&quot; ਕੁਝ ਲੋਕਾਂ ਨੇ ਕਿਹਾ। &quot;ਪਰ ਇਹ ਸਾਡੇ ਲਈ ਬੁਰੀ ਕਿਸਮਤ ਲਿਆਉਣਗੇ!&quot; ਹੋਰਾਂ ਨੇ ਕਿਹਾ I</p>
+<p>ਸਾਰੇ ਬਹਿਸ ਕਰਨ ਲੱਗ ਪਏ। &quot;ਅਸੀਂ ਕਿਹਾ ਸੀ ਕਿ ਆਪਾਂ ਮਾਂ ਅਤੇ ਬੱਚੇ ਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗੇ ਅਤੇ ਆਪਾਂ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗੇ,&quot; ਕੁਝ ਲੋਕਾਂ ਨੇ ਕਿਹਾ। &quot;ਪਰ ਇਹ ਸਾਡੇ ਲਈ ਬੁਰੀ ਕਿਸਮਤ ਲਿਆਉਣਗੇ!&quot; ਹੋਰਾਂ ਨੇ ਕਿਹਾ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>ਜਦ ਉਸ ਨੇ ਭੱਜਣਾ ਬੰਦ ਕੀਤਾ, ਰਾਤ ਹੋ ਗਈ ਸੀ ਅਤੇ ਗਧਾ ਗੁੰਮ ਹੋ ਗਿਆ। &quot;ਹੀ ਹੋ?&quot; ਉਸ ਨੇ ਹਨੇਰੇ ਵਿੱਚ ਧੀਮੀ ਅਵਾਜ਼ ਵਿੱਚ ਆਖਿਆ I &quot;ਹੀ ਹੋ?&quot; ਅਵਾਜ਼ ਵਾਪਸ ਗੂੰਜ ਆਈ। ਉਹ ਇਕੱਲਾ ਸੀ। ਆਪਣੇ ਆਪ ਨੂੰ ਗੁੱਟ ਕੇ ਉਹ ਡੂੰਘੀ ਅਤੇ ਦੁਖ ਭਰੀ ਨੀਂਦ ਵਿੱਚ ਪੈ ਗਿਆ।</p>
+<p>ਜਦ ਉਸ ਨੇ ਭੱਜਣਾ ਬੰਦ ਕੀਤਾ, ਰਾਤ ਹੋ ਗਈ ਸੀ ਅਤੇ ਗਧਾ ਗੁੰਮ ਹੋ ਗਿਆ। &quot;ਹੀ ਹੋ?&quot; ਉਸ ਨੇ ਹਨੇਰੇ ਵਿੱਚ ਧੀਮੀ ਅਵਾਜ਼ ਵਿੱਚ ਆਖਿਆ। &quot;ਹੀ ਹੋ?&quot; ਅਵਾਜ਼ ਵਾਪਸ ਗੂੰਜ ਆਈ। ਉਹ ਇਕੱਲਾ ਸੀ। ਆਪਣੇ ਆਪ ਨੂੰ ਗੁੱਟ ਕੇ ਉਹ ਡੂੰਘੀ ਅਤੇ ਦੁਖ ਭਰੀ ਨੀਂਦ ਵਿੱਚ ਪੈ ਗਿਆ।</p>
 <center>
 <strong>12</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>ਉਹ ਬੱਦਲਾਂ ਦੇ ਵਿਚਕਾਰ ਸੌ ਗਏI ਗਧੇ ਨੂੰ ਸੁਪਨਾ ਆਇਆ ਕਿ ਉਸ ਦੀ ਮਾਂ ਬਿਮਾਰ ਹੈ ਅਤੇ ਉਸ ਨੂੰ ਬੁਲਾ ਰਹੀਂ ਹੈ। ਜਦ ਉਸ ਨੂੰ ਜਾਗ ਆਈ...</p>
+<p>ਉਹ ਬੱਦਲਾਂ ਦੇ ਵਿਚਕਾਰ ਸੌ ਗਏ। ਗਧੇ ਨੂੰ ਸੁਪਨਾ ਆਇਆ ਕਿ ਉਸ ਦੀ ਮਾਂ ਬਿਮਾਰ ਹੈ ਅਤੇ ਉਸ ਨੂੰ ਬੁਲਾ ਰਹੀਂ ਹੈ। ਜਦ ਉਸ ਨੂੰ ਜਾਗ ਆਈ...</p>
 <center>
 <strong>16</strong>
 </center>
