--- a/stories/ko/0006_아난시와-지혜.html
+++ b/stories/ko/0006_아난시와-지혜.html
@@ -56,7 +56,7 @@ Ghanaian folktale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>어느 날, 느야메는 지혜의 항아리를 아난시에게 주기로 결정했어요. 아난시는 점토 항아리를 볼 때 마다 무언가 새로운 것을 배웠어요. 정말 신났어요!</p>
+<p>어느 날, 느야메는 지혜의 항아리를 아난시에게 주기로 결정했어요. 아난시는 점토 항아리를 볼 때 마다 무언가 새로운 것을 배웠어요. 정말 신이났어요!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
