--- a/stories/ko/0027_결정.html
+++ b/stories/ko/0027_결정.html
@@ -70,7 +70,7 @@ Ursula Nafula<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
 
-<p>많이 아이들이 학교를 빠졌어요.</p>
+<p>많은 아이들이 학교를 빠졌어요.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
