--- a/stories/ko/0052_심베그위레.html
+++ b/stories/ko/0052_심베그위레.html
@@ -154,7 +154,7 @@ Rukia Nantale<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
 
-<p>그 다음 주, 아니타는 식사를 위해 집에, 심베그위레, 그녀의 사촌, 그리고 그녀의 이모를 초대했어요. 아니타는 심베그위레가 좋아하는 음식을 모두 준비하고, 모두가 배가 부를때 까지 먹었어요. 그리고 어른들이 이야기하는 동안 아이들은 놀았어요. 심베그위레는 행복하고 용감함을 느꼈어요. 그녀는 곧, 아주 곧, 그녀의 아버지와 그녀의 새 엄마와 살기 위해 집으로 돌아 것이라고 결정했어요.</p>
+<p>그 다음 주, 아니타는 식사를 위해 집에, 심베그위레, 그녀의 사촌, 그리고 그녀의 이모를 초대했어요. 아니타는 심베그위레가 좋아하는 음식을 모두 준비하고, 모두가 배가 부를때 까지 먹었어요. 그리고 어른들이 이야기하는 동안 아이들은 놀았어요. 심베그위레는 행복하고 용감함을 느꼈어요. 그녀는 곧, 아주 곧, 그녀의 아버지와 그녀의 새 엄마와 살기 위해 집으로 돌아 갈 것이라고 결정했어요.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
