--- a/stories/ko/0089_칼라이는-식물에게-말해요.html
+++ b/stories/ko/0089_칼라이는-식물에게-말해요.html
@@ -77,7 +77,7 @@ Ursula Nafula<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p>학교에서, 칼라이는 단지 중앙의 나무에게 말해요. “나무야, 큰 가지를 뻗어서 우리가 네 그늘 아래 읽을 수 있게 해주렴.”</p>
+<p>학교에서, 칼라이는 단지 중앙의 나무에게 말해요. “나무야, 큰 가지를 뻗어서 우리가 네 그늘 아래서 읽을 수 있게 해주렴.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
