--- a/stories/ko/0158_닭과-독수리.html
+++ b/stories/ko/0158_닭과-독수리.html
@@ -77,7 +77,7 @@ Ann Nduku<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
 
-<p>하지만 다른 새들은 독수리가 날아가는 것을 봤어요. 그들도 날개를 만들으려고 닭에게 바늘을 빌려 달라고 했어요. 곧 새들은 하늘 곳곳을 날았어요.</p>
+<p>하지만 다른 새들은 독수리가 날아가는 것을 봤어요. 그들도 날개를 만들려고 닭에게 바늘을 빌려 달라고 했어요. 곧 새들은 하늘 곳곳을 날았어요.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Ann Nduku<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
 
-<p>그날 오후, 독수리가 돌아왔어요. 그녀는 여행 중 느슨해 진 날개를 고치려고 바늘을 돌려 달라고 했어요. 닭은 찬장을 위를 찾아보고 부엌도 찾아보고 마당까지 찾아 봤어요. 하지만 그 바늘을 찾을 수 없었어요.</p>
+<p>그날 오후, 독수리가 돌아왔어요. 그녀는 여행 중 느슨해 진 날개를 고치려고 바늘을 돌려 달라고 했어요. 닭은 찬장 위를 찾아보고 부엌도 찾아보고 마당까지 찾아 봤어요. 하지만 그 바늘을 찾을 수 없었어요.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ann Nduku<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>독수리 날개의 그림자가 땅에 나타날때, 닭은 병아리들에게 충고했어요. “이 아무것도 없는 땅에서 부터 피해.” 그러자 병아리들이 답했어요. “우리는 바보가 아니에요. 우리는 도망갈 거에요.”</p>
+<p>독수리 날개의 그림자가 땅에 나타날때, 닭은 병아리들에게 충고했어요. “이 아무것도 없는 땅에서 부터 피해.” 그러자 병아리들이 대답했어요. “우리는 바보가 아니에요. 우리는 도망갈 거에요.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
