--- a/stories/ko/0158_닭과-독수리_slides.html
+++ b/stories/ko/0158_닭과-독수리_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>하지만 다른 새들은 독수리가 날아가는 것을 봤어요. 그들도 날개를 만들으려고 닭에게 바늘을 빌려 달라고 했어요. 곧 새들은 하늘 곳곳을 날았어요.</p>
+<p>하지만 다른 새들은 독수리가 날아가는 것을 봤어요. 그들도 날개를 만들려고 닭에게 바늘을 빌려 달라고 했어요. 곧 새들은 하늘 곳곳을 날았어요.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>그날 오후, 독수리가 돌아왔어요. 그녀는 여행 중 느슨해 진 날개를 고치려고 바늘을 돌려 달라고 했어요. 닭은 찬장을 위를 찾아보고 부엌도 찾아보고 마당까지 찾아 봤어요. 하지만 그 바늘을 찾을 수 없었어요.</p>
+<p>그날 오후, 독수리가 돌아왔어요. 그녀는 여행 중 느슨해 진 날개를 고치려고 바늘을 돌려 달라고 했어요. 닭은 찬장 위를 찾아보고 부엌도 찾아보고 마당까지 찾아 봤어요. 하지만 그 바늘을 찾을 수 없었어요.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>독수리 날개의 그림자가 땅에 나타날때, 닭은 병아리들에게 충고했어요. &quot;이 아무것도 없는 땅에서 부터 피해.&quot; 그러자 병아리들이 답했어요. &quot;우리는 바보가 아니에요. 우리는 도망갈 거에요.&quot;</p>
+<p>독수리 날개의 그림자가 땅에 나타날때, 닭은 병아리들에게 충고했어요. &quot;이 아무것도 없는 땅에서 부터 피해.&quot; 그러자 병아리들이 대답했어요. &quot;우리는 바보가 아니에요. 우리는 도망갈 거에요.&quot;</p>
 <center>
 <strong>10</strong>
 </center>
