--- a/stories/ko/0201_당나귀-아이-.html
+++ b/stories/ko/0201_당나귀-아이-.html
@@ -108,7 +108,7 @@ Lindiwe Matshikiza<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
 
-<p>만약 그 아이가 작은 상태로 머물러 있었다면 모든 것을 달라졌을 거에요. 하지만 그 당나귀 아이는 무럭 무럭 자라서 더이상 어머니의 등에 엎히지 못했어요. 그리고 엄청난 노력에도 사람처럼 행동하지 못했어요. 그의 엄마는 자주 피곤하고 속상해 했어요. 가끔씩은 당나귀 아이에게 동물이 해야 할일을 시키곤 했어요.</p>
+<p>만약 그 아이가 작은 상태로 머물러 있었다면 모든 것이 달라졌을 거에요. 하지만 그 당나귀 아이는 무럭 무럭 자라서 더이상 어머니의 등에 엎히지 못했어요. 그리고 엄청난 노력에도 사람처럼 행동하지 못했어요. 그의 엄마는 자주 피곤하고 속상해 했어요. 가끔씩은 당나귀 아이에게 동물이 해야 할일을 시키곤 했어요.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -129,7 +129,7 @@ Lindiwe Matshikiza<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>당나귀가 뛰는 것을 멈추 었을때, 밤이 되었고 당나귀는 길을 잃었어요. 
+<p>당나귀가 뛰는 것을 멈췄을때, 밤이 되었고 당나귀는 길을 잃었어요. 
 “히하?” 그가 어둠에게 속삭이자 “히하?” 하고 에코가 들렸어요. 그는 혼자 였어요. 그는 쭈구려서 깊고 슬픈 잠에 들었어요.</p>
 
 <div class="pagenum">12</div>
