--- a/stories/ko/0243_할머니와-함께하는-휴가.html
+++ b/stories/ko/0243_할머니와-함께하는-휴가.html
@@ -56,7 +56,7 @@ Violet Otieno<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
 
-<p>오돈고와 아피요는 너무 신났습니다 왜냐하면 또 할머니를 뵐 수 있었기 때문입니다. 그 전날 밤, 그들은 짐을 쌓고 할머니의 마을로 가는 긴여행을 위해 준비했습니다. 그날 밤 오돈고와 아피요는 다음날의 여행에 대해 얘기 하느라 잠도 자지 않았습니다.</p>
+<p>오돈고와 아피요는 너무 신났습니다 왜냐하면 또 할머니를 뵐 수 있었기 때문입니다. 그 전날 밤, 그들은 짐을 싸서 할머니의 마을로 가는 긴여행을 위해 준비했습니다. 그날 밤 오돈고와 아피요는 다음날의 여행에 대해 얘기 하느라 잠도 자지 않았습니다.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,21 +77,21 @@ Violet Otieno<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
 
-<p>아빠께서 마을에 도착할 때 쯤 오돈고와 아피요를 깨웠습니다. 그들은 나무아래에 매트위에 쉬시고 계시는 그들의 할머니, 니야-칸야다를 만났습니다. 니야-칸야다는 루오뜻으로 ‘칸야다 사람들의 딸’ 이라는 뜻이였습니다.  할머니께서는 강하고 아름다우셨습니다.</p>
+<p>아빠께서 마을에 도착할 때 쯤 오돈고와 아피요를 깨웠습니다. 그들은 나무아래에 매트위에 쉬시고 계시는 그들의 할머니, 니야-칸야다를 만났습니다. 니야-칸야다는 루오뜻으로 ‘칸야다 사람들의 딸’ 이라는 뜻이였습니다. 할머니께서는 강하고 아름다우셨습니다.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>니야-칸야다는 셋을 집으로 반갑게 환영하셨습니다. 그리고 그들 주변을 돌며 노래를 부르시며 춤을 추시며 즐겁게 해주셨습니다. 오돈고와 아피요는 그들이 도시에서 산 선물을 드리려는 마음에 들떠 있었습니다. 오돈고는 외쳤습니다, “제 선물부터 열어보세요.” 아피요도 외쳤습니다, “아니, 제 선물부터  열어보세요!”</p>
+<p>니야-칸야다는 셋을 집으로 반갑게 환영하셨습니다. 그리고 그들 주변을 돌며 노래를 부르시며 춤을 추시며 즐겁게 해주셨습니다. 오돈고와 아피요는 그들이 도시에서 산 선물을 드리려는 마음에 들떠 있었습니다. 오돈고는 외쳤습니다, “제 선물부터 열어보세요.” 아피요도 외쳤습니다, “아니, 제 선물부터 열어보세요!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
 
-<p>할머니께서는 선물을 열어보시고 전통적인 방식으로 그의  손녀들을 축복해주셨습니다.</p>
+<p>할머니께서는 선물을 열어보시고 전통적인 방식으로 그의 손녀들을 축복해주셨습니다.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
