--- a/stories/ko/0262_마고즈위.html
+++ b/stories/ko/0262_마고즈위.html
@@ -49,7 +49,7 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
 
-<p>나이로비라는 바쁜 도시안에, 집과는 너무나도 먼곳에 한 무리의 집이없는 남자 아이들이 살았습니다. 그들은 하루하루를 맞이하며 겨우겨우 살아갔습니다. 어느날 아침, 남자아이들은 그들이 차가운 길바닥에 깔고 자는 담요를 개고 있었습니다.  추위를 이기려고 쓰레기로 불을 지폈습니다. 그 남자아이들 사이에는 마고즈위가 있었습니다. 마고즈위는 막내였습니다.</p>
+<p>나이로비라는 바쁜 도시안에, 집과는 너무나도 먼곳에 한 무리의 집이없는 남자 아이들이 살았습니다. 그들은 하루하루를 맞이하며 겨우겨우 살아갔습니다. 어느날 아침, 남자아이들은 그들이 차가운 길바닥에 깔고 자는 담요를 개고 있었습니다. 추위를 이기려고 쓰레기로 불을 지폈습니다. 그 남자아이들 사이에는 마고즈위가 있었습니다. 마고즈위는 막내였습니다.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>추운 어느날이였습니다. 마고즈위는 길가에 서서 구걸을 하고 있었습니다. 그런데 어떤 남자 한분이 오셔서 말을 하셨습니다, “안녕, 나는 토마스라고해. 난 네가 음식을 먹을 수 있는곳, 저기서 일하는 사람이야.” 그 남자는 노란색 벽에 파란지붕집을 향해 가르켰습니다. “너 저기 가서 밥 먹을래?” 라고 물어봤습니다. 마고즈위는 그 남자분을 한번 보고, 그리고 집을 쳐다보았습니다. 그리고 마즈고위는 “언젠가는요,” 라고 대답을 하고 걸어갔습니다.</p>
+<p>추운 어느날이였습니다. 마고즈위는 길가에 서서 구걸을 하고 있었습니다. 그런데 어떤 한 남자분이 오셔서 말을 하셨습니다, “안녕, 나는 토마스라고해. 난 네가 음식을 먹을 수 있는곳, 저기서 일하는 사람이야.” 그 남자는 노란색 벽에 파란지붕집을 향해 가르켰습니다. “너 저기 가서 밥 먹을래?” 라고 물어봤습니다. 마고즈위는 그 남자분을 한번 보고, 그리고 집을 쳐다보았습니다. 그리고 마즈고위는 “언젠가는요,” 라고 대답을 하고 걸어갔습니다.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Lesley Koyi<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
 
-<p>마고즈위의 열번째 생일이 되는날, 토마스는 새로운 책을 선물했습니다. 이 책의 이야기는 작은 마을에 사는 남자가 커서 유명한 축구선수가 된 내용이였습니다. 토마스는 그 이야기를 마고즈위에게 자주 읽어주었습니다. 그런데, 어느날 그는 얘기했습니다, “내 생각엔 네가 이제 학교도 가고 책읽는것도 배우면 좋을 것 같은데. 어떻게 생각해?” 그리고 토마스는 마고즈위에게 아이들이 지낼 수 있는 곳과 다닐 수 있는 학교에 대해  말을 해주었습니다.</p>
+<p>마고즈위의 열번째 생일이 되는날, 토마스는 새로운 책을 선물했습니다. 이 책의 이야기는 작은 마을에 사는 남자가 커서 유명한 축구선수가 된 내용이였습니다. 토마스는 그 이야기를 마고즈위에게 자주 읽어주었습니다. 그런데, 어느날 그는 얘기했습니다, “내 생각엔 네가 이제 학교도 가고 책읽는것도 배우면 좋을 것 같은데. 어떻게 생각해?” 그리고 토마스는 마고즈위에게 아이들이 지낼 수 있는 곳과 다닐 수 있는 학교에 대해 말을 해주었습니다.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
