--- a/stories/ko/0315_사키마의-노래.html
+++ b/stories/ko/0315_사키마의-노래.html
@@ -154,7 +154,7 @@ Ursula Nafula<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
 
-<p>사키마는 노래를 부르는 것을 끝내고 돌아려고 몸을 돌렸어요. 하지만 부자는 급하게 나와서 “다시 노래를 불러주게” 라고 말했어요.</p>
+<p>사키마는 노래를 부르는 것을 끝내고 돌아가려고 몸을 돌렸어요. 하지만 부자는 급하게 나와서 “다시 노래를 불러주게” 라고 말했어요.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
