--- a/stories/ko/0324_집으로부터-도시로-떠난-날.html
+++ b/stories/ko/0324_집으로부터-도시로-떠난-날.html
@@ -77,21 +77,21 @@ Lesley Koyi, Ursula Nafula<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
 
-<p>난 창가 옆에 끼어앉았어요. 내 옆은 사람은 초록색 플라스틱 가방을 꽉 쥐고 있었어요. 그는 오랜 샌들과 헤진 코트를 입고 있었고, 그리고 불안해 보였어요.</p>
+<p>난 창가 옆에 끼어앉았어요. 내 옆의 사람은 초록색 플라스틱 가방을 꽉 쥐고 있었어요. 그는 오랜 샌들과 헤진 코트를 입고 있었고, 그리고 불안해 보였어요.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
 
-<p>난 버스 밖을 보고 내가 자라난 우리 마을을 떠나고 있던걸 깨달았어요. 난 큰 도시로 가는 중이었어요.</p>
+<p>난 버스 밖을 보고 내가 자라난 우리 마을을 떠나고 있단걸 깨달았어요. 난 큰 도시로 가는 중이었어요.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
 
-<p>짐 싣는게 끝나고 모든 승객들이 앉았어요. 행상인들은 물건을 승객들에게 팔기 위해 버스 안으로 밀치고 들어왔어요. 각자 무엇을 팔고 있는지 외쳤어요. 단어들이 웃기게 들렸어요.</p>
+<p>짐 싣는게 끝나고 모든 승객들이 앉았어요. 행상인들은 물건들을 승객들에게 팔기 위해 버스 안으로 밀치고 들어왔어요. 각자 무엇을 팔고 있는지 외쳤어요. 단어들이 웃기게 들렸어요.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
