--- a/stories/ko/0337_밀랍-아이들_slides.html
+++ b/stories/ko/0337_밀랍-아이들_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>아이들은 절대 서로 싸우지 않았어요. 그들은 부모님을 집과 밭에서 도왔죠.</p>
+<p>아이들은 절대 서로 싸우지 않았어요. 그들은 부모님을 집과 밭에서 도와드렸어요.</p>
 <center>
 <strong>2</strong>
 </center>
