--- a/stories/ko/0342_벌.html
+++ b/stories/ko/0342_벌.html
@@ -84,7 +84,7 @@ Adelheid Marie Bwire<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
 
-<p>우린 라힘에게 화가 났어요. 하지만 라힘은 미안하지 않아요.</p>
+<p>우린 라힘에게 화가 났어요. 하지만 라힘은 미안해하지 않아요.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Adelheid Marie Bwire<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
 
-<p>엄마는 이럴 줄 알으셨어요. 과일이 라힘을 벌주고 있어요!</p>
+<p>엄마는 이럴 줄 아셨어요. 과일이 라힘을 벌주고 있어요!</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
