--- a/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ.html
+++ b/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ.html
@@ -63,7 +63,7 @@ Ghanaian folktale<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>ਲਾਲਚੀ ਅਨਾਨਸੀ ਨੇ ਸੋਚਿਆ, “ਮੈਂ ਘੜੇ ਨੂੰ ਲੰਬੇ ਰੁੱਖ ਦੇ ਉੱਪਰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗਾ। ਫੇਰ ਮੈਂ ਇਸਨੂੰ ਆਪਣੇ ਆਪ ਲਈ ਰੱਖ ਸਕਦਾ ਹਾਂ! “ ਉਸਨੇ ਲੰਬਾ ਧਾਗਾ ਬੁਣਿਆ, ਮਿੱਟੀ ਦੇ ਘੜੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਲਪੇਟਿਆ, ਅਤੇ ਉਸ ਦੇ ਪੇਟ ਨਾਲ ਬੰਨ੍ਹਿਆ। ਉਹ ਰੁੱਖ ਤੇ ਚੜ੍ਹਨ ਲੱਗਾ। ਪਰ ਰੁੱਖ ਤੇ ਚੜ੍ਹਨਾ ਮੁਸ਼ਕਲ ਸੀ ਕਿਉਂਕਿ ਘੜਾ ਉਸਦੇ ਗੋਡਿਆਂ ਵਿੱਚ ਵੱਜੀ ਜਾਂਦਾ ਸੀ।</p>
+<p>ਲਾਲਚੀ ਅਨਾਨਸੀ ਨੇ ਸੋਚਿਆ, “ਮੈਂ ਘੜੇ ਨੂੰ ਲੰਬੇ ਰੁੱਖ ਦੇ ਉੱਪਰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗਾ। ਫੇਰ ਮੈਂ ਇਸਨੂੰ ਆਪਣੇ ਆਪ ਲਈ ਰੱਖ ਸਕਦਾ ਹਾਂ!” ਉਸਨੇ ਲੰਬਾ ਧਾਗਾ ਬੁਣਿਆ, ਮਿੱਟੀ ਦੇ ਘੜੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਲਪੇਟਿਆ, ਅਤੇ ਉਸ ਦੇ ਪੇਟ ਨਾਲ ਬੰਨ੍ਹਿਆ। ਉਹ ਰੁੱਖ ਤੇ ਚੜ੍ਹਨ ਲੱਗਾ। ਪਰ ਰੁੱਖ ਤੇ ਚੜ੍ਹਨਾ ਮੁਸ਼ਕਲ ਸੀ ਕਿਉਂਕਿ ਘੜਾ ਉਸਦੇ ਗੋਡਿਆਂ ਵਿੱਚ ਵੱਜੀ ਜਾਂਦਾ ਸੀ।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
