--- a/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ_slides.html
+++ b/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p>ਕੁਝ ਮਹੀਨੇ ਬਾਅਦ, ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਨੇ ਉਹਨ੍ਹਾਂ ਨੂੰ ਦੱਸਿਆ ਕਿ ਉਹ ਕੁਝ ਦੇਰ ਲਈ ਘਰ ਤੋਂ ਬਾਹਰ ਰਹੇਗਾ। &quot;ਮੈਨੂੰ ਮੇਰੇ ਕੰਮ ਲਈ ਸਫ਼ਰ ਕਰਨਾ ਪਵੇਗਾ,&quot; ਉਸ ਨੇ ਕਿਹਾ। &quot;ਪਰ ਮੈਨੂੰ ਪਤਾ ਹੈ ਕਿ ਤੁਸੀਂ ਇਕ-ਦੂਜੇ ਦੀ ਦੇਖ-ਭਾਲ ਕਰੋਗੇ।&quot; ਸਿਮਬੇਗਵਾਇਰ ਉਦਾਸ ਹੋਈ ਪਰ ਉਸ ਦੇ ਪਿਤਾ ਨੇ ਨੋਟਿਸ ਨਹੀਂ ਕੀਤਾ। ਅਨੀਤਾ ਨੇ ਕੁਝ ਨਹੀਂ ਕਿਹਾ। ਉਹ ਵੀ ਖੁਸ਼ ਨਹੀ ਸੀl</p>
+<p>ਕੁਝ ਮਹੀਨੇ ਬਾਅਦ, ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਨੇ ਉਹਨ੍ਹਾਂ ਨੂੰ ਦੱਸਿਆ ਕਿ ਉਹ ਕੁਝ ਦੇਰ ਲਈ ਘਰ ਤੋਂ ਬਾਹਰ ਰਹੇਗਾ। &quot;ਮੈਨੂੰ ਮੇਰੇ ਕੰਮ ਲਈ ਸਫ਼ਰ ਕਰਨਾ ਪਵੇਗਾ,&quot; ਉਸ ਨੇ ਕਿਹਾ। &quot;ਪਰ ਮੈਨੂੰ ਪਤਾ ਹੈ ਕਿ ਤੁਸੀਂ ਇਕ-ਦੂਜੇ ਦੀ ਦੇਖ-ਭਾਲ ਕਰੋਗੇ।&quot; ਸਿਮਬੇਗਵਾਇਰ ਉਦਾਸ ਹੋਈ ਪਰ ਉਸ ਦੇ ਪਿਤਾ ਨੇ ਨੋਟਿਸ ਨਹੀਂ ਕੀਤਾ। ਅਨੀਤਾ ਨੇ ਕੁਝ ਨਹੀਂ ਕਿਹਾ। ਉਹ ਵੀ ਖੁਸ਼ ਨਹੀ ਸੀ।</p>
 <center>
 <strong>5</strong>
 </center>
