--- a/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html
+++ b/stories/pa/0089_ਖਲਾਈ-ਪੌਦਿਆਂ-ਨਾਲ-ਗੱਲਬਾਤ-ਕਰਦੀ-ਹੈ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>ਖਲਾਈ ਸਕੂਲ ਨੂੰ ਚੱਲ ਕੇ ਜਾਂਦੀ ਹੈ। ਰਾਹ ਵਿੱਚ, ਉਹ ਘਾਹ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। &quot;ਘਾਹ, ਕਿਰਪਾ ਕਰਕੇ ਤੁਸੀਂ ਹੋਰ ਹਰਿਆਲੀ ਪਾਉਂ ਅਤੇ ਸੁੱਕ ਨਾ ਜਾਇਓ I&quot;</p>
+<p>ਖਲਾਈ ਸਕੂਲ ਨੂੰ ਚੱਲ ਕੇ ਜਾਂਦੀ ਹੈ। ਰਾਹ ਵਿੱਚ, ਉਹ ਘਾਹ ਨਾਲ ਗੱਲਬਾਤ ਕਰਦੀ ਹੈ। &quot;ਘਾਹ, ਕਿਰਪਾ ਕਰਕੇ ਤੁਸੀਂ ਹੋਰ ਹਰਿਆਲੀ ਪਾਉਂ ਅਤੇ ਸੁੱਕ ਨਾ ਜਾਇਓ।&quot;</p>
 <center>
 <strong>3</strong>
 </center>
