--- a/stories/pa/0111_ਹਿੱਪੋ-ਦੇ-ਵਾਲ-ਕਿਉਂ-ਨਹੀਂ-ਹੁੰਦੇ.html
+++ b/stories/pa/0111_ਹਿੱਪੋ-ਦੇ-ਵਾਲ-ਕਿਉਂ-ਨਹੀਂ-ਹੁੰਦੇ.html
@@ -70,14 +70,14 @@ Basilio Gimo, David Ker<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
 
-<p>ਹਿੱਪੋ ਨੇ ਖਰਗੋਸ਼ ਤੋਂ ਮੁਆਫੀ ਮੰਗੀ, “ਮੈਨੂੰ ਅਫ਼ਸੋਸ ਹੈ। ਮੈਂ ਤੁਹਾਨੂੰ ਵੇਖਿਆ ਨਹੀਂI ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੂੰ ਮਾਫ਼ ਕਰ ਦਿਓ!” ਪਰ ਖਰਗੋਸ਼ ਨੇ ਇਕ ਨਾ ਸੁਣੀ ਅਤੇ ਉਹ ਹਿੱਪੋ ਤੇ ਚੀਕਦਾ ਹੋਇਆ ਬੋਲਿਆ, “ਤੂੰ ਇਹ ਜਾਣ-ਬੁੱਝ ਕੇ ਕੀਤਾ ਹੈ! ਕਿਸੇ ਦਿਨ ਤੂੰ ਦੇਖੀਂ! ਤੇਨੂੰ ਇਸ ਦਾ ਭੁਗਤਾਨ ਕਰਨਾ ਪਵੇਗਾ!”</p>
+<p>ਹਿੱਪੋ ਨੇ ਖਰਗੋਸ਼ ਤੋਂ ਮੁਆਫੀ ਮੰਗੀ, “ਮੈਨੂੰ ਅਫ਼ਸੋਸ ਹੈ। ਮੈਂ ਤੁਹਾਨੂੰ ਵੇਖਿਆ ਨਹੀਂ। ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੂੰ ਮਾਫ਼ ਕਰ ਦਿਓ!” ਪਰ ਖਰਗੋਸ਼ ਨੇ ਇਕ ਨਾ ਸੁਣੀ ਅਤੇ ਉਹ ਹਿੱਪੋ ਤੇ ਚੀਕਦਾ ਹੋਇਆ ਬੋਲਿਆ, “ਤੂੰ ਇਹ ਜਾਣ-ਬੁੱਝ ਕੇ ਕੀਤਾ ਹੈ! ਕਿਸੇ ਦਿਨ ਤੂੰ ਦੇਖੀਂ! ਤੇਨੂੰ ਇਸ ਦਾ ਭੁਗਤਾਨ ਕਰਨਾ ਪਵੇਗਾ!”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>ਖਰਗੋਸ਼ ਅੱਗ ਨੂੰ ਲੱਭਣ ਚਲਿਆ ਗਿਆ ਅਤੇ ਉਸ ਨੇ ਆਖਿਆ, “ਜਾਓ, ਹਿੱਪੋ ਨੂੰ ਸਾੜ ਦਿਓ ਜਦ ਉਹ ਘਾਹ ਖਾਣ ਲਈ ਪਾਣੀ ਵਿੱਚੋਂ ਬਾਹਰ ਆਈ। ਉਸ ਨੇ ਮੇਰੇ ਤੇ ਪੈਰ ਰੱਖਿਆ!” ਅੱਗ ਨੇ ਜਵਾਬ ਦਿੱਤਾ, “ਕੋਈ ਗੱਲ ਨਹੀਂ, ਖਰਗੋਸ਼, ਮੇਰੇ ਦੋਸਤI ਮੈਂ ਉਸੇ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗਾ ਜਿਵੇਂ ਤੂੰ ਚਾਹੁੰਦਾ ਹੈਂI”</p>
+<p>ਖਰਗੋਸ਼ ਅੱਗ ਨੂੰ ਲੱਭਣ ਚਲਿਆ ਗਿਆ ਅਤੇ ਉਸ ਨੇ ਆਖਿਆ, “ਜਾਓ, ਹਿੱਪੋ ਨੂੰ ਸਾੜ ਦਿਓ ਜਦ ਉਹ ਘਾਹ ਖਾਣ ਲਈ ਪਾਣੀ ਵਿੱਚੋਂ ਬਾਹਰ ਆਈ। ਉਸ ਨੇ ਮੇਰੇ ਤੇ ਪੈਰ ਰੱਖਿਆ!” ਅੱਗ ਨੇ ਜਵਾਬ ਦਿੱਤਾ, “ਕੋਈ ਗੱਲ ਨਹੀਂ, ਖਰਗੋਸ਼, ਮੇਰੇ ਦੋਸਤ। ਮੈਂ ਉਸੇ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗਾ ਜਿਵੇਂ ਤੂੰ ਚਾਹੁੰਦਾ ਹੈਂ।”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
