--- a/stories/pa/0156_ਭੁੱਖਾ-ਮਗਰਮੱਛ_slides.html
+++ b/stories/pa/0156_ਭੁੱਖਾ-ਮਗਰਮੱਛ_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>ਉਹ ਹੌਲੀ ਹੌਲੀ ਅਤੇ ਚੁੱਪ-ਚਾਪ ਭੋਜਨ ਦੀ ਖੋਜ ਕਰਦਾ ਸੀI ਅਤੇ ਫਿਰ...</p>
+<p>ਉਹ ਹੌਲੀ ਹੌਲੀ ਅਤੇ ਚੁੱਪ-ਚਾਪ ਭੋਜਨ ਦੀ ਖੋਜ ਕਰਦਾ ਸੀ। ਅਤੇ ਫਿਰ...</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>ਉਸ ਤੋਂ ਬਾਅਦ, ਉਸ ਦੀ ਭੁੱਖ ਮਿਟ ਜਾਂਦੀ ਹੈ ਅਤੇ ਉਹ ਖੁਸ਼ ਹੋ ਜਾਂਦਾ ਹੈI</p>
+<p>ਉਸ ਤੋਂ ਬਾਅਦ, ਉਸ ਦੀ ਭੁੱਖ ਮਿਟ ਜਾਂਦੀ ਹੈ ਅਤੇ ਉਹ ਖੁਸ਼ ਹੋ ਜਾਂਦਾ ਹੈ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>ਜਦ ਤੱਕ ਉਸ ਨੂੰ ਦੋਬਾਰਾ ਭੁੱਖ ਨਹੀਂ ਲੱਗਦੀI</p>
+<p>ਜਦ ਤੱਕ ਉਸ ਨੂੰ ਦੋਬਾਰਾ ਭੁੱਖ ਨਹੀਂ ਲੱਗਦੀ।</p>
 <center>
 <strong>5</strong>
 </center>
