--- a/stories/pa/0201_ਗਧਾ-ਬੱਚਾ.html
+++ b/stories/pa/0201_ਗਧਾ-ਬੱਚਾ.html
@@ -84,7 +84,7 @@ Lindiwe Matshikiza<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>ਸਾਰੇ ਬਹਿਸ ਕਰਨ ਲੱਗ ਪਏ। “ਅਸੀਂ ਕਿਹਾ ਸੀ ਕਿ ਆਪਾਂ ਮਾਂ ਅਤੇ ਬੱਚੇ ਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗੇ ਅਤੇ ਆਪਾਂ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗੇ,” ਕੁਝ ਲੋਕਾਂ ਨੇ ਕਿਹਾ। “ਪਰ ਇਹ ਸਾਡੇ ਲਈ ਬੁਰੀ ਕਿਸਮਤ ਲਿਆਉਣਗੇ!” ਹੋਰਾਂ ਨੇ ਕਿਹਾ I</p>
+<p>ਸਾਰੇ ਬਹਿਸ ਕਰਨ ਲੱਗ ਪਏ। “ਅਸੀਂ ਕਿਹਾ ਸੀ ਕਿ ਆਪਾਂ ਮਾਂ ਅਤੇ ਬੱਚੇ ਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗੇ ਅਤੇ ਆਪਾਂ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕਰਾਂਗੇ,” ਕੁਝ ਲੋਕਾਂ ਨੇ ਕਿਹਾ। “ਪਰ ਇਹ ਸਾਡੇ ਲਈ ਬੁਰੀ ਕਿਸਮਤ ਲਿਆਉਣਗੇ!” ਹੋਰਾਂ ਨੇ ਕਿਹਾ।</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>ਜਦ ਉਸ ਨੇ ਭੱਜਣਾ ਬੰਦ ਕੀਤਾ, ਰਾਤ ਹੋ ਗਈ ਸੀ ਅਤੇ ਗਧਾ ਗੁੰਮ ਹੋ ਗਿਆ। “ਹੀ ਹੋ?” ਉਸ ਨੇ ਹਨੇਰੇ ਵਿੱਚ ਧੀਮੀ ਅਵਾਜ਼ ਵਿੱਚ ਆਖਿਆ I “ਹੀ ਹੋ?” ਅਵਾਜ਼ ਵਾਪਸ ਗੂੰਜ ਆਈ। ਉਹ ਇਕੱਲਾ ਸੀ। ਆਪਣੇ ਆਪ ਨੂੰ ਗੁੱਟ ਕੇ ਉਹ ਡੂੰਘੀ ਅਤੇ ਦੁਖ ਭਰੀ ਨੀਂਦ ਵਿੱਚ ਪੈ ਗਿਆ।</p>
+<p>ਜਦ ਉਸ ਨੇ ਭੱਜਣਾ ਬੰਦ ਕੀਤਾ, ਰਾਤ ਹੋ ਗਈ ਸੀ ਅਤੇ ਗਧਾ ਗੁੰਮ ਹੋ ਗਿਆ। “ਹੀ ਹੋ?” ਉਸ ਨੇ ਹਨੇਰੇ ਵਿੱਚ ਧੀਮੀ ਅਵਾਜ਼ ਵਿੱਚ ਆਖਿਆ। “ਹੀ ਹੋ?” ਅਵਾਜ਼ ਵਾਪਸ ਗੂੰਜ ਆਈ। ਉਹ ਇਕੱਲਾ ਸੀ। ਆਪਣੇ ਆਪ ਨੂੰ ਗੁੱਟ ਕੇ ਉਹ ਡੂੰਘੀ ਅਤੇ ਦੁਖ ਭਰੀ ਨੀਂਦ ਵਿੱਚ ਪੈ ਗਿਆ।</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Lindiwe Matshikiza<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
 
-<p>ਉਹ ਬੱਦਲਾਂ ਦੇ ਵਿਚਕਾਰ ਸੌ ਗਏI ਗਧੇ ਨੂੰ ਸੁਪਨਾ ਆਇਆ ਕਿ ਉਸ ਦੀ ਮਾਂ ਬਿਮਾਰ ਹੈ ਅਤੇ ਉਸ ਨੂੰ ਬੁਲਾ ਰਹੀਂ ਹੈ। ਜਦ ਉਸ ਨੂੰ ਜਾਗ ਆਈ…</p>
+<p>ਉਹ ਬੱਦਲਾਂ ਦੇ ਵਿਚਕਾਰ ਸੌ ਗਏ। ਗਧੇ ਨੂੰ ਸੁਪਨਾ ਆਇਆ ਕਿ ਉਸ ਦੀ ਮਾਂ ਬਿਮਾਰ ਹੈ ਅਤੇ ਉਸ ਨੂੰ ਬੁਲਾ ਰਹੀਂ ਹੈ। ਜਦ ਉਸ ਨੂੰ ਜਾਗ ਆਈ…</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
