--- a/stories/pa/0294_ਦਾਦੀ-ਦੇ-ਕੇਲੇ.html
+++ b/stories/pa/0294_ਦਾਦੀ-ਦੇ-ਕੇਲੇ.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
 
-<p>ਦਾਦੀ ਦਾ ਬਾਗ ਸ਼ਾਨਦਾਰ ਚਰੀ, ਬਾਜਰੇ, ਅਤੇ ਕਸਾਵੇ ਨਾਲ ਭਰਿਆ ਹੋਇਆ ਸੀI ਪਰ ਕੇਲੇ ਸਭ ਤੋਂ ਵਧੀਆ ਸਨ। ਦਾਦੀ ਦੇ ਕਈ ਪੋਤੇ ਪੋਤੀਆਂ ਸਨ ਪਰ ਮੈਨੂੰ ਚੋਰੀ-ਛਿਪੇ ਪਤਾ ਸੀ ਕਿ ਮੈਂਂ ਉਸ ਦੀ ਚਹੇਤੀ ਸੀ। ਉਹ ਅਕਸਰ ਮੈਨੂੰ ਉਸ ਦੇ ਘਰ ਸੱਦਦੀ ਸੀ। ਉਹ ਮੈਨੂੰ ਛੋਟੇ-ਛੋਟੇ ਭੇਦ ਵੀ ਦੱਸਦੀ ਸੀ। ਪਰ ਇਕ ਭੇਦ ਉਸ ਨੇ ਮੇਰੇ ਨਾਲ ਨਹੀਂ ਸ਼ੇਅਰ ਕੀਤਾ: ਜਿੱਥੇ ਉਹ ਕੇਲੇ ਪੱਕੇ ਕਰਦੀ ਸੀ।</p>
+<p>ਦਾਦੀ ਦਾ ਬਾਗ ਸ਼ਾਨਦਾਰ ਚਰੀ, ਬਾਜਰੇ, ਅਤੇ ਕਸਾਵੇ ਨਾਲ ਭਰਿਆ ਹੋਇਆ ਸੀ। ਪਰ ਕੇਲੇ ਸਭ ਤੋਂ ਵਧੀਆ ਸਨ। ਦਾਦੀ ਦੇ ਕਈ ਪੋਤੇ ਪੋਤੀਆਂ ਸਨ ਪਰ ਮੈਨੂੰ ਚੋਰੀ-ਛਿਪੇ ਪਤਾ ਸੀ ਕਿ ਮੈਂਂ ਉਸ ਦੀ ਚਹੇਤੀ ਸੀ। ਉਹ ਅਕਸਰ ਮੈਨੂੰ ਉਸ ਦੇ ਘਰ ਸੱਦਦੀ ਸੀ। ਉਹ ਮੈਨੂੰ ਛੋਟੇ-ਛੋਟੇ ਭੇਦ ਵੀ ਦੱਸਦੀ ਸੀ। ਪਰ ਇਕ ਭੇਦ ਉਸ ਨੇ ਮੇਰੇ ਨਾਲ ਨਹੀਂ ਸ਼ੇਅਰ ਕੀਤਾ: ਜਿੱਥੇ ਉਹ ਕੇਲੇ ਪੱਕੇ ਕਰਦੀ ਸੀ।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
 
-<p>ਜਦ ਮੈਂ ਵਾਪਸ ਆਈ, ਦਾਦੀ ਬਾਹਰ ਬੈਠੀ ਸੀ ਪਰ ਉਸ ਕੋਲ ਨਾ ਟੋਕਰੀ ਸੀ ਅਤੇ ਨਾ ਹੀ ਕੇਲੇ। “ਦਾਦੀ, ਟੋਕਰੀ ਕਿੱਥੇ ਹੈ, ਸਾਰੇ ਕੇਲੇ ਕਿੱਥੇ ਹਨ,ਅਤੇ ਕਿੱਥੇ …” ੫ਰ ਮੈਨੂੰ ਸਿਰਫ ਇੱਕ ਜਵਾਬ ਮਿਲਿਆ, “ਉਹ ਮੇਰੀ ਜਾਦੂ ਵਾਲੀ ਜਗ੍ਹਾ ਵਿੱਚ ਹਨI” ਇਹ ਬਹੁਤ ਨਿਰਾਸ਼ਾਜਨਕ ਸੀ!</p>
+<p>ਜਦ ਮੈਂ ਵਾਪਸ ਆਈ, ਦਾਦੀ ਬਾਹਰ ਬੈਠੀ ਸੀ ਪਰ ਉਸ ਕੋਲ ਨਾ ਟੋਕਰੀ ਸੀ ਅਤੇ ਨਾ ਹੀ ਕੇਲੇ। “ਦਾਦੀ, ਟੋਕਰੀ ਕਿੱਥੇ ਹੈ, ਸਾਰੇ ਕੇਲੇ ਕਿੱਥੇ ਹਨ, ਅਤੇ ਕਿੱਥੇ …” ੫ਰ ਮੈਨੂੰ ਸਿਰਫ ਇੱਕ ਜਵਾਬ ਮਿਲਿਆ, “ਉਹ ਮੇਰੀ ਜਾਦੂ ਵਾਲੀ ਜਗ੍ਹਾ ਵਿੱਚ ਹਨ।” ਇਹ ਬਹੁਤ ਨਿਰਾਸ਼ਾਜਨਕ ਸੀ!</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,14 +84,14 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
 
-<p>ਦਾਦੀ ਦੀ ਅਵਾਜ਼ ਨੇ ਮੈਨੂੰ ਡਰਾ ਦਿੱਤਾ ਜਦ ਉਸ ਨੇ ਬੁਲਾਇਆ, “ਤੂੰ ਕੀ ਕਰ ਰਹੀਂ ਹੈਂ? ਜਲਦੀ ਕਰ ਅਤੇ ਮੇਰੀ ਸੋਟੀ ਲੈ ਆ।” ਮੈਂ ਉਸ ਦੀ ਤੁਰਨ ਵਾਲੀ ਸੋਟੀ ਨਾਲ ਜਲਦਬਾਜੀ ਨਾਲ ਬਾਹਰ ਗਈ। “ਤੂੰ ਕਿਉਂ ਮੁਸਕਰਾ ਰਹੀ ਹੈਂ?” ਦਾਦੀ ਨੇ ਪੁੱਛਿਆI ਉਸ ਦੇ ਸਵਾਲ ਨੇ ਮੈਨੂੰ ਇਹਸਾਸ ਦਲਾਇਆ ਕਿ ਮੈਂ ਅਜੇ ਵੀ ਜਾਦੂ ਵਾਲੇ ਸਥਾਨ ਨੂੰ ਲੱਭਣ ਦੀ ਖੁਸ਼ੀ ਵਿਚ ਮੁਸਕਰਾ ਰਹੀ ਸੀ।</p>
+<p>ਦਾਦੀ ਦੀ ਅਵਾਜ਼ ਨੇ ਮੈਨੂੰ ਡਰਾ ਦਿੱਤਾ ਜਦ ਉਸ ਨੇ ਬੁਲਾਇਆ, “ਤੂੰ ਕੀ ਕਰ ਰਹੀਂ ਹੈਂ? ਜਲਦੀ ਕਰ ਅਤੇ ਮੇਰੀ ਸੋਟੀ ਲੈ ਆ।” ਮੈਂ ਉਸ ਦੀ ਤੁਰਨ ਵਾਲੀ ਸੋਟੀ ਨਾਲ ਜਲਦਬਾਜੀ ਨਾਲ ਬਾਹਰ ਗਈ। “ਤੂੰ ਕਿਉਂ ਮੁਸਕਰਾ ਰਹੀ ਹੈਂ?” ਦਾਦੀ ਨੇ ਪੁੱਛਿਆ। ਉਸ ਦੇ ਸਵਾਲ ਨੇ ਮੈਨੂੰ ਇਹਸਾਸ ਦਲਾਇਆ ਕਿ ਮੈਂ ਅਜੇ ਵੀ ਜਾਦੂ ਵਾਲੇ ਸਥਾਨ ਨੂੰ ਲੱਭਣ ਦੀ ਖੁਸ਼ੀ ਵਿਚ ਮੁਸਕਰਾ ਰਹੀ ਸੀ।</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
 
-<p>ਅਗਲੇ ਦਿਨ ਜਦ ਦਾਦੀ ਮੇਰੀ ਮਾਂ ਨੂੰ ਮਿਲਣ ਆਈ, ਮੈਂ ਉਸ ਦੇ ਘਰ ਕਾਹਲੀ ਨਾਲ ਕੇਲੇ ਚੈੱਕ ਕਰਨ ਗਈI ਉੱਥੇ ਕਈ ਕੇਲੇ ਬਹੁਤ ਪੱਕੇ ਸਨ। ਮੈਂ ਇੱਕ ਚੁੱਕਿਆ ਅਤੇ ਆਪਣੀ ਡਰੈਸ ਵਿੱਚ ਲਕੋ ਲਿਆ। ਟੋਕਰੀ ਨੂੰ ਫਿਰ ਢੱਕਣ ਤੋਂ ਬਾਅਦ, ਮੈਂ ਘਰ ਦੇ ਪਿੱਛੇ ਜਾਕੇ ਤੇਜ਼ੀ ਨਾਲ ਕੇਲਾ ਖਾਧਾ। ਇਸ ਤੋਂ ਜ਼ਿਆਦਾ ਮਿੱਠਾ ਕੇਲਾ ਮੈਂ ਕਦੇ ਵੀ ਨਹੀਂ ਸੀ ਖਾਧਾ।</p>
+<p>ਅਗਲੇ ਦਿਨ ਜਦ ਦਾਦੀ ਮੇਰੀ ਮਾਂ ਨੂੰ ਮਿਲਣ ਆਈ, ਮੈਂ ਉਸ ਦੇ ਘਰ ਕਾਹਲੀ ਨਾਲ ਕੇਲੇ ਚੈੱਕ ਕਰਨ ਗਈ। ਉੱਥੇ ਕਈ ਕੇਲੇ ਬਹੁਤ ਪੱਕੇ ਸਨ। ਮੈਂ ਇੱਕ ਚੁੱਕਿਆ ਅਤੇ ਆਪਣੀ ਡਰੈਸ ਵਿੱਚ ਲਕੋ ਲਿਆ। ਟੋਕਰੀ ਨੂੰ ਫਿਰ ਢੱਕਣ ਤੋਂ ਬਾਅਦ, ਮੈਂ ਘਰ ਦੇ ਪਿੱਛੇ ਜਾਕੇ ਤੇਜ਼ੀ ਨਾਲ ਕੇਲਾ ਖਾਧਾ। ਇਸ ਤੋਂ ਜ਼ਿਆਦਾ ਮਿੱਠਾ ਕੇਲਾ ਮੈਂ ਕਦੇ ਵੀ ਨਹੀਂ ਸੀ ਖਾਧਾ।</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
