--- a/stories/pa/0324_ਜਿਸ-ਦਿਨ-ਮੈਂ-ਸ਼ਹਿਰ-ਲਈ-ਘਰ-ਛੱਡਿਆ.html
+++ b/stories/pa/0324_ਜਿਸ-ਦਿਨ-ਮੈਂ-ਸ਼ਹਿਰ-ਲਈ-ਘਰ-ਛੱਡਿਆ.html
@@ -49,7 +49,7 @@ Lesley Koyi, Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
 
-<p>ਮੇਰੇ ਪਿੰਡ ਦਾ ਛੋਟਾ ਬੱਸ ਸਟਾਪ ਲੋਕਾਂ ਅਤੇ ਓਵਰਲੋਡ ਬੱਸਾਂ ਨਾਲ ਰੁੱਝਿਆ ਹੋਇਆ ਸੀ I ਜ਼ਮੀਨ ਤੇ ਹੋਰ ਵੀ ਚੀਜ਼ਾਂ ਲੋਡ ਕਰਨ ਵਾਲੀਆਂ ਪਈਆਂ ਸਨ I ਟਾਊਟ ਰੌਲਾ ਪਾ ਕੇ ਬੱਸਾਂ ਕਿੱਥੇ ਜਾ ਰਹੀਆਂ ਹਨ ਦੱਸ ਰਹੇ ਸਨ।</p>
+<p>ਮੇਰੇ ਪਿੰਡ ਦਾ ਛੋਟਾ ਬੱਸ ਸਟਾਪ ਲੋਕਾਂ ਅਤੇ ਓਵਰਲੋਡ ਬੱਸਾਂ ਨਾਲ ਰੁੱਝਿਆ ਹੋਇਆ ਸੀ। ਜ਼ਮੀਨ ਤੇ ਹੋਰ ਵੀ ਚੀਜ਼ਾਂ ਲੋਡ ਕਰਨ ਵਾਲੀਆਂ ਪਈਆਂ ਸਨ। ਟਾਊਟ ਰੌਲਾ ਪਾ ਕੇ ਬੱਸਾਂ ਕਿੱਥੇ ਜਾ ਰਹੀਆਂ ਹਨ ਦੱਸ ਰਹੇ ਸਨ।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,7 +63,7 @@ Lesley Koyi, Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
 
-<p>ਸ਼ਹਿਰ ਵੱਲ ਦੀ ਬੱਸ ਲਗਭਗ ਭਰੀ ਹੋਈ ਸੀ, ਪਰ ਹੋਰ ਲੋਕ ਅਜੇ ਵੀ ਚੜਣ ਲਈ ਧੱਕੇ ਦੇ ਰਹੇ ਸਨ। ਕੁਝ ਲੋਕਾਂ ਨੇ ਬੱਸ ਦੇ ਥੱਲੇ ਆਪਣਾ ਸਾਮਾਨ ਰੱਖਿਆ ਅਤੇ ਹੋਰਾਂ ਨੇ ਅੰਦਰ ਸ਼ੈਲਫਾਂ ਤੇ ਸਮਾਨ ਟਕਾਇਆ I</p>
+<p>ਸ਼ਹਿਰ ਵੱਲ ਦੀ ਬੱਸ ਲਗਭਗ ਭਰੀ ਹੋਈ ਸੀ, ਪਰ ਹੋਰ ਲੋਕ ਅਜੇ ਵੀ ਚੜਣ ਲਈ ਧੱਕੇ ਦੇ ਰਹੇ ਸਨ। ਕੁਝ ਲੋਕਾਂ ਨੇ ਬੱਸ ਦੇ ਥੱਲੇ ਆਪਣਾ ਸਾਮਾਨ ਰੱਖਿਆ ਅਤੇ ਹੋਰਾਂ ਨੇ ਅੰਦਰ ਸ਼ੈਲਫਾਂ ਤੇ ਸਮਾਨ ਟਕਾਇਆ।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Lesley Koyi, Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
 
-<p>ਮੈਂ ਇੱਕ ਖਿੜਕੀ ਨਾਲ ਕੁਚਲ ਕੇ ਬੈਠ ਗਿਆ। ਮੇਰੇ ਨਾਲ ਇੱਕ ਵਿਅਕਤੀ ਹਰੇ ਪਲਾਸਟਿਕ ਬੈਗ ਨੂੰ ਘੁੱਟ ਕੇ ਫੜੀ ਬੈਠਾ ਸੀI ਉਸ ਨੇ ਪੁਰਾਣੀ ਜੁੱਤੀ ਅਤੇ ਘਸਿਆ ਕੋਟ ਪਾਇਆ ਹੋਇਆ ਸੀ ਅਤੇ ਉਹ ਘਬਰਾਇਆ ਹੋਇਆ ਦਿੱਖ ਰਿਹਾ ਸੀ।</p>
+<p>ਮੈਂ ਇੱਕ ਖਿੜਕੀ ਨਾਲ ਕੁਚਲ ਕੇ ਬੈਠ ਗਿਆ। ਮੇਰੇ ਨਾਲ ਇੱਕ ਵਿਅਕਤੀ ਹਰੇ ਪਲਾਸਟਿਕ ਬੈਗ ਨੂੰ ਘੁੱਟ ਕੇ ਫੜੀ ਬੈਠਾ ਸੀ। ਉਸ ਨੇ ਪੁਰਾਣੀ ਜੁੱਤੀ ਅਤੇ ਘਸਿਆ ਕੋਟ ਪਾਇਆ ਹੋਇਆ ਸੀ ਅਤੇ ਉਹ ਘਬਰਾਇਆ ਹੋਇਆ ਦਿੱਖ ਰਿਹਾ ਸੀ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -147,14 +147,14 @@ Lesley Koyi, Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p>ਨੌ ਘੰਟੇ ਬਾਅਦ, ਉੱਚੇ ਖੜਕੇ ਅਤੇ ਪਿੰਡ ਨੂੰ ਵਾਪਸ ਜਾ ਰਹੇ ਯਾਤਰੀਆਂ ਲਈ ਹਾਕਾਂ ਨਾਲ ਮੇਰੀ ਅੱਖ ਖੁਲ ਗਈ। ਮੈਂ ਆਪਣੇ ਛੋਟੇ ਬੈਗ ਨੂੰ ਫੜ੍ਹਿਆ ਅਤੇ ਬੱਸ ਦੇ ਬਾਹਰ ਛਾਲ ਮਾਰੀ I</p>
+<p>ਨੌ ਘੰਟੇ ਬਾਅਦ, ਉੱਚੇ ਖੜਕੇ ਅਤੇ ਪਿੰਡ ਨੂੰ ਵਾਪਸ ਜਾ ਰਹੇ ਯਾਤਰੀਆਂ ਲਈ ਹਾਕਾਂ ਨਾਲ ਮੇਰੀ ਅੱਖ ਖੁਲ ਗਈ। ਮੈਂ ਆਪਣੇ ਛੋਟੇ ਬੈਗ ਨੂੰ ਫੜ੍ਹਿਆ ਅਤੇ ਬੱਸ ਦੇ ਬਾਹਰ ਛਾਲ ਮਾਰੀ।</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
 
-<p>ਵਾਪਸੀ ਵਾਲੀ ਬੱਸ ਜਲਦੀ ਭਰ ਗਈI ਜਲਦੀ ਇਹ ਬੱਸ ਵਾਪਸ ਪੂਰਬ ਵੱਲ ਜਾਵੇਗੀ। ਹੁਣ ਮੇਰੇ ਲਈ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਗੱਲ ਮੇਰੇ ਚਾਚੇ ਦੇ ਘਰ ਦੀ ਤਲਾਸ਼ ਸ਼ੁਰੂ ਕਰਨ ਵਾਲੀ ਸੀ।</p>
+<p>ਵਾਪਸੀ ਵਾਲੀ ਬੱਸ ਜਲਦੀ ਭਰ ਗਈ। ਜਲਦੀ ਇਹ ਬੱਸ ਵਾਪਸ ਪੂਰਬ ਵੱਲ ਜਾਵੇਗੀ। ਹੁਣ ਮੇਰੇ ਲਈ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਗੱਲ ਮੇਰੇ ਚਾਚੇ ਦੇ ਘਰ ਦੀ ਤਲਾਸ਼ ਸ਼ੁਰੂ ਕਰਨ ਵਾਲੀ ਸੀ।</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
