--- a/stories/pa/0327_ਜਾਨਵਰਾਂ-ਦੀ-ਗਿਣਤੀ.html
+++ b/stories/pa/0327_ਜਾਨਵਰਾਂ-ਦੀ-ਗਿਣਤੀ.html
@@ -49,21 +49,21 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>ਪੰਜਾਬੀ</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
 
-<p>ਇਕ ਹਾਥੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਿਹਾ ਹੈI</p>
+<p>ਇਕ ਹਾਥੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਿਹਾ ਹੈ।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
 
-<p>ਦੋ ਜਿਰਾਫ਼ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨI</p>
+<p>ਦੋ ਜਿਰਾਫ਼ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨ।</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
 
-<p>ਤਿੰਨ ਮੱਝਾਂ ਅਤੇ ਚਾਰ ਪੰਛੀ ਵੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨI</p>
+<p>ਤਿੰਨ ਮੱਝਾਂ ਅਤੇ ਚਾਰ ਪੰਛੀ ਵੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨ।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>ਪੰਜਾਬੀ</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
 
-<p>ਇਕ ਸ਼ੇਰ ਗਰਜਦਾ ਹੈI ਉਹ ਵੀ ਪਾਣੀ ਪੀਣਾ ਚਾਹੁੰਦਾ ਹੈ। ਸ਼ੇਰ ਤੋਂ ਕੌਣ ਡਰਦਾ ਹੈ?</p>
+<p>ਇਕ ਸ਼ੇਰ ਗਰਜਦਾ ਹੈ। ਉਹ ਵੀ ਪਾਣੀ ਪੀਣਾ ਚਾਹੁੰਦਾ ਹੈ। ਸ਼ੇਰ ਤੋਂ ਕੌਣ ਡਰਦਾ ਹੈ?</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
 
-<p>ਇਕ ਹਾਥੀ ਸ਼ੇਰ ਦੇ ਨਾਲ ਪਾਣੀ ਪੀ ਰਿਹਾ ਹੈI</p>
+<p>ਇਕ ਹਾਥੀ ਸ਼ੇਰ ਦੇ ਨਾਲ ਪਾਣੀ ਪੀ ਰਿਹਾ ਹੈ।</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
