--- a/stories/pa/0327_ਜਾਨਵਰਾਂ-ਦੀ-ਗਿਣਤੀ_slides.html
+++ b/stories/pa/0327_ਜਾਨਵਰਾਂ-ਦੀ-ਗਿਣਤੀ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
-<p>ਇਕ ਹਾਥੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਿਹਾ ਹੈI</p>
+<p>ਇਕ ਹਾਥੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਿਹਾ ਹੈ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
-<p>ਦੋ ਜਿਰਾਫ਼ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨI</p>
+<p>ਦੋ ਜਿਰਾਫ਼ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
-<p>ਤਿੰਨ ਮੱਝਾਂ ਅਤੇ ਚਾਰ ਪੰਛੀ ਵੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨI</p>
+<p>ਤਿੰਨ ਮੱਝਾਂ ਅਤੇ ਚਾਰ ਪੰਛੀ ਵੀ ਪਾਣੀ ਪੀਣ ਜਾ ਰਹੇ ਹਨ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
-<p>ਇਕ ਸ਼ੇਰ ਗਰਜਦਾ ਹੈI ਉਹ ਵੀ ਪਾਣੀ ਪੀਣਾ ਚਾਹੁੰਦਾ ਹੈ। ਸ਼ੇਰ ਤੋਂ ਕੌਣ ਡਰਦਾ ਹੈ?</p>
+<p>ਇਕ ਸ਼ੇਰ ਗਰਜਦਾ ਹੈ। ਉਹ ਵੀ ਪਾਣੀ ਪੀਣਾ ਚਾਹੁੰਦਾ ਹੈ। ਸ਼ੇਰ ਤੋਂ ਕੌਣ ਡਰਦਾ ਹੈ?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
-<p>ਇਕ ਹਾਥੀ ਸ਼ੇਰ ਦੇ ਨਾਲ ਪਾਣੀ ਪੀ ਰਿਹਾ ਹੈI</p>
+<p>ਇਕ ਹਾਥੀ ਸ਼ੇਰ ਦੇ ਨਾਲ ਪਾਣੀ ਪੀ ਰਿਹਾ ਹੈ।</p>
 <center>
 <strong>8</strong>
 </center>
