--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -87,14 +87,36 @@
             <li><a href="fr/0089_khalai-parle-aux-plantes_audio-slides.html" target="_blank">Khalai parle aux plantes</a></li>
             <li><a href="fr/0095_zama-est-formidable_audio-slides.html" target="_blank">Zama est formidable !</a></li>
             <li><a href="fr/0110_une-petite-graine-lhistoire-de-wangari-maathai_audio-slides.html" target="_blank">Une petite graine : l'histoire de Wangari Maathai</a></li>
+            <li><a href="fr/0111_pourquoi-les-hippopotames-nont-pas-de-poils_audio-slides.html" target="_blank">Pourquoi les hippopotames n'ont pas de poils</a></li>
+            <li><a href="fr/0112_mon-corps_audio-slides.html" target="_blank">Mon corps</a></li>
+            <li><a href="fr/0120_cheveux_audio-slides.html" target="_blank">Cheveux</a></li>
+            <li><a href="fr/0129_petit-frère-paresseux_audio-slides.html" target="_blank">Petit frère paresseux</a></li>
+            <li><a href="fr/0141_la-poule-et-le-millepatte_audio-slides.html" target="_blank">La poule et le millepatte</a></li>
+            <li><a href="fr/0156_le-crocodile-qui-avait-tres-faim_audio-slides.html" target="_blank">Le crocodile qui avait très faim</a></li>
+            <li><a href="fr/0158_poule-et-aigle_audio-slides.html" target="_blank">Poule et Aigle</a></li>
+            <li><a href="fr/0201_lenfant-âne_audio-slides.html" target="_blank">L'enfant-âne</a></li>
+            <li><a href="fr/0210_tingi-et-les-vaches_audio-slides.html" target="_blank">Tingi et les vaches</a></li>
+            <li><a href="fr/0231_le-livre-de-la-météo_audio-slides.html" target="_blank">Le livre de la météo</a></li>
+            <li><a href="fr/0234_andiswa-star-du-football_audio-slides.html" target="_blank">Andiswa star du football</a></li>
+            <li><a href="fr/0243_les-vacances-avec-grand-maman_audio-slides.html" target="_blank">Les vacances avec grand-maman</a></li>
+            <li><a href="fr/0262_magozwe_audio-slides.html" target="_blank">Magozwe</a></li>
+            <li><a href="fr/0271_deux_audio-slides.html" target="_blank">Deux</a></li>
+            <li><a href="fr/0291_que-va-dire-la-soeur-de-vusi_audio-slides.html" target="_blank">Que va dire la sœur de Vusi ?</a></li>
+            <li><a href="fr/0294_les-bananes-de-grand-mere_audio-slides.html" target="_blank">Les bananes de grand-mère</a></li>
+            <li><a href="fr/0296_tom-le-vendeur-de-bananes_audio-slides.html" target="_blank">Tom le vendeur de bananes</a></li>
+            <li><a href="fr/0302_le-feu_audio-slides.html" target="_blank">Le feu</a></li>
+            <li><a href="fr/0324_le-jour-que-je-quitta-la-maison-pour-la-ville_audio-slides.html" target="_blank">Le jour que je quitta la maison pour la ville</a></li>
+            <li><a href="fr/0327_compter-les-animaux_audio-slides.html" target="_blank">Compter les animaux</a></li>
+            <li><a href="fr/0337_les-enfants-de-cire_audio-slides.html" target="_blank">Les enfants de cire</a></li>
+            <li><a href="fr/0342_punition_audio-slides.html" target="_blank">Punition</a></li>
           </ul>
-        <h3>Luganda [Oluganda]</h3>
+        <h3><a name="lg"></a>Luganda [Oluganda]</h3>
           <ul>
             <li><a href="lg/0066_nakku-nenviiri-essatu_audio-slides.html" target="_blank">Nakku n'enviiri essatu</a></li>
             <li><a href="lg/0231_akatabo-kobudde_audio-slides.html" target="_blank">Akatabo k'obudde</a></li>
             <li><a href="lg/0337_abaana-abaava-mu-nvumbo_audio-slides.html" target="_blank">Abaana abaava mu nvumbo</a></li>
           </ul>
-        <h3>Lumasaaba</h3>
+        <h3><a name="myx"></a>Lumasaaba</h3>
           <ul>
             <li><a href="myx/0165_mulongo-ni-wanasilikhe_audio-slides.html" target="_blank">Mulongo ni wanasilikhe</a></li>
             <li><a href="myx/0193_basooleli-babili-be-ntsala_audio-slides.html" target="_blank">Basooleli babili be ntsala</a></li>
