--- a/audio/index.html
+++ b/audio/index.html
@@ -123,6 +123,16 @@
             <li><a href="sv/0087_jag-gillar-att-läsa_audio-slides.html" target="_blank">Jag gillar att läsa!</a></li>
             <li><a href="sv/0156_den-hungriga-krokodilen_audio-slides.html" target="_blank">Den hungriga krokodilen</a></li>
           </ul>
+        <h3><a name="tl"></a>Tagalog [Tagalog]</h3>
+          <ul>
+            <li><a href="tl/0001_ang-mamang-napakatangkad_audio-slides.html" target="_blank">Ang mamang napakatangkad</a></li>
+            <li><a href="tl/0002_pagmasdan-ang-mga-hayop_audio-slides.html" target="_blank">Pagmasdan ang mga hayop</a></li>
+            <li><a href="tl/0003_ano-isusuot-ko-sa-iskul_audio-slides.html" target="_blank">Ano isusuot ko sa iskul?</a></li>
+            <li><a href="tl/0004_si-kambing-si-aso-at-si-baka_audio-slides.html" target="_blank">Si Kambing, Si Aso, at Si Baka</a></li>
+            <li><a href="tl/0006_si-anansi-at-ang-dunong_audio-slides.html" target="_blank">Si Anansi at ang Dunong</a></li>
+            <li><a href="tl/0008_anong-ginagawa-mo_audio-slides.html" target="_blank">Anong ginagawa mo?</a></li>
+            <li><a href="tl/0009_nasaan-ang-pusa-ko_audio-slides.html" target="_blank">Nasaan ang pusa ko?</a></li>
+          </ul>
 
   </body>
   <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg">Image</a> by Karlien de Villiers (CC-BY), found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. <a href="https://github.com/yegor256/tacit/">Tacit theme</a> by Yegor Bugayenko. View or fork this project <a href="https://github.com/global-asp/gasp-audio">on GitHub</a>.</p></footer>
