--- a/audio/index.html
+++ b/audio/index.html
@@ -132,6 +132,39 @@
             <li><a href="tl/0006_si-anansi-at-ang-dunong_audio-slides.html" target="_blank">Si Anansi at ang Dunong</a></li>
             <li><a href="tl/0008_anong-ginagawa-mo_audio-slides.html" target="_blank">Anong ginagawa mo?</a></li>
             <li><a href="tl/0009_nasaan-ang-pusa-ko_audio-slides.html" target="_blank">Nasaan ang pusa ko?</a></li>
+            <li><a href="tl/0027_bagong-buhay_audio-slides.html" target="_blank">Bagong buhay</a></li>
+            <li><a href="tl/0030_mga-damdamin_audio-slides.html" target="_blank">Mga Damdamin</a></li>
+            <li><a href="tl/0052_si-simbegwire_audio-slides.html" target="_blank">Si Simbegwire</a></li>
+            <li><a href="tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_audio-slides.html" target="_blank">Si Nozibele at ang Tatlong Hibla ng Buhok</a></li>
+            <li><a href="tl/0067_pagluto_audio-slides.html" target="_blank">Pagluto</a></li>
+            <li><a href="tl/0072_ang-paghihiganti-ng-pastol-ng-pulut-pukyutan_audio-slides.html" target="_blank">Ang Paghihiganti ng Pastol ng Pulut-Pukyutan</a></li>
+            <li><a href="tl/0087_mahilig-akong-magbasa_audio-slides.html" target="_blank">Mahilig akong magbasa!</a></li>
+            <li><a href="tl/0089_kausap-ni-khalai-ang-halaman_audio-slides.html" target="_blank">Kausap ni Khalai ang halaman</a></li>
+            <li><a href="tl/0095_magaling-si-zama_audio-slides.html" target="_blank">Magaling si Zama!</a></li>
+            <li><a href="tl/0110_maliit-na-binhi-ang-kuwento-ni-wangari-maathai_audio-slides.html" target="_blank">Maliit na Binhi: Ang Kuwento ni Wangari Maathai</a></li>
+            <li><a href="tl/0111_bakit-walang-buhok-ang-mga-hipo_audio-slides.html" target="_blank">Bakit walang buhok ang mga hipo</a></li>
+            <li><a href="tl/0112_ang-aking-katawan_audio-slides.html" target="_blank">Ang aking katawan</a></li>
+            <li><a href="tl/0120_buhok_audio-slides.html" target="_blank">Buhok</a></li>
+            <li><a href="tl/0129_si-bunsong-tamad_audio-slides.html" target="_blank">Si bunsong tamad</a></li>
+            <li><a href="tl/0141_si-manok-at-si-milipid_audio-slides.html" target="_blank">Si Manok at Si Milipid</a></li>
+            <li><a href="tl/0156_ang-buwayang-gutom_audio-slides.html" target="_blank">Ang buwayang gutom</a></li>
+            <li><a href="tl/0158_ang-inahin-at-ang-agila_audio-slides.html" target="_blank">Ang Inahin at ang Agila</a></li>
+            <li><a href="tl/0201_batang-asno_audio-slides.html" target="_blank">Batang Asno</a></li>
+            <li><a href="tl/0210_si-tingi-at-ang-mga-baka_audio-slides.html" target="_blank">Si Tingi at ang mga Baka</a></li>
+            <li><a href="tl/0231_ibat-ibang-panahon_audio-slides.html" target="_blank">Iba't ibang panahon</a></li>
+            <li><a href="tl/0234_andiswa-soccer-bida_audio-slides.html" target="_blank">Andiswa, Soccer Bida</a></li>
+            <li><a href="tl/0243_bakasyon-sa-bahay-ni-lola_audio-slides.html" target="_blank">Bakasyon sa bahay ni Lola</a></li>
+            <li><a href="tl/0262_magozwe_audio-slides.html" target="_blank">Magozwe</a></li>
+            <li><a href="tl/0271_dalawa_audio-slides.html" target="_blank">Dalawa</a></li>
+            <li><a href="tl/0291_sabi-ng-ate-ni-vusi_audio-slides.html" target="_blank">Sabi ng ate ni Vusi</a></li>
+            <li><a href="tl/0294_ang-mga-saging-ni-lola_audio-slides.html" target="_blank">Ang mga saging ni Lola</a></li>
+            <li><a href="tl/0296_ang-tindero-ng-saging-na-si-tom_audio-slides.html" target="_blank">Ang Tindero ng Saging na si Tom</a></li>
+            <li><a href="tl/0302_apoy_audio-slides.html" target="_blank">Apoy</a></li>
+            <li><a href="tl/0315_awit-ni-sakima_audio-slides.html" target="_blank">Awit ni Sakima</a></li>
+            <li><a href="tl/0324_paluwas-sa-malaking-lungsod_audio-slides.html" target="_blank">Paluwas sa malaking lungsod</a></li>
+            <li><a href="tl/0327_pagbibilang-ng-mga-hayop_audio-slides.html" target="_blank">Pagbibilang ng mga Hayop</a></li>
+            <li><a href="tl/0337_mga-batang-sera_audio-slides.html" target="_blank">Mga Batang Sera</a></li>
+            <li><a href="tl/0342_parusa_audio-slides.html" target="_blank">Parusa</a></li>
           </ul>
 
   </body>
