--- a/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ_slides.html
+++ b/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>ਅਗਲੀ ਸਵੇਰ, ਉਹ ਆਪਣੇ ਪਿਤਾ ਜੀ ਦੀ ਕਾਰ ਵਿੱਚ ਪਿੰਡ ਵੱਲ ਰਵਾਨਾ ਹੋ ਗਏ। ਉਹ ਪਹਾੜਾਂ, ਜੰਗਲੀ ਜਾਨਵਰਾਂ ਅਤੇ ਚਾਹ ਦੇ ਪਲਾਟਾਂ ਦੇ ਲਾਗੇ ਡਰਾਈਵ ਕਰਕੇ ਗਏ। ਉਹਨਾਂ ਨੇ ਕਾਰਾਂ ਗਿਣੀਆਂ ਅਤੇ ਗੀਤ ਗਾਏ।</p>
+<p>ਅਗਲੀ ਸਵੇਰ, ਉਹ ਆਪਣੇ ਪਿਤਾ ਜੀ ਦੀ ਕਾਰ ਵਿੱਚ ਪਿੰਡ ਵੱਲ ਰਵਾਨਾ ਹੋ ਗਏ। ਉਹ ਪਹਾੜਾਂ, ਜੰਗਲੀ ਜਾਨਵਰਾਂ ਅਤੇ ਚਾਹ ਦੀਆਂ ਫੈਕਟਰੀਆਂ ਦੇ ਲਾਗੇ ਡਰਾਈਵ ਕਰਕੇ ਗਏ। ਉਹਨਾਂ ਨੇ ਕਾਰਾਂ ਗਿਣੀਆਂ ਅਤੇ ਗੀਤ ਗਾਏ।</p>
 <center>
 <strong>3</strong>
 </center>
