--- a/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا.html
+++ b/stories/ar/0111_لماذا-لاتملك-أفراس-النهرشعرا.html
@@ -105,8 +105,8 @@ Basilio Gimo, David Ker<br>العربية</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p dir="rtl">فرح الأرنب أن شعر فرس النهر قد احترق٠
-وحتى يومنا هذا، وخوفا من النار، لا تبتعد فرس النهر عن الماء أبدا٠</p>
+<p dir="rtl">فرح الأرنب أن شعر فرس النهر قد احترق.
+وحتى يومنا هذا، وخوفا من النار، لا تبتعد فرس النهر عن الماء أبدا.</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
