--- a/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ.html
+++ b/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ.html
@@ -63,7 +63,7 @@ Violet Otieno<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
 
-<p>ਅਗਲੀ ਸਵੇਰ, ਉਹ ਆਪਣੇ ਪਿਤਾ ਜੀ ਦੀ ਕਾਰ ਵਿੱਚ ਪਿੰਡ ਵੱਲ ਰਵਾਨਾ ਹੋ ਗਏ। ਉਹ ਪਹਾੜਾਂ, ਜੰਗਲੀ ਜਾਨਵਰਾਂ ਅਤੇ ਚਾਹ ਦੇ ਪਲਾਟਾਂ ਦੇ ਲਾਗੇ ਡਰਾਈਵ ਕਰਕੇ ਗਏ। ਉਹਨਾਂ ਨੇ ਕਾਰਾਂ ਗਿਣੀਆਂ ਅਤੇ ਗੀਤ ਗਾਏ।</p>
+<p>ਅਗਲੀ ਸਵੇਰ, ਉਹ ਆਪਣੇ ਪਿਤਾ ਜੀ ਦੀ ਕਾਰ ਵਿੱਚ ਪਿੰਡ ਵੱਲ ਰਵਾਨਾ ਹੋ ਗਏ। ਉਹ ਪਹਾੜਾਂ, ਜੰਗਲੀ ਜਾਨਵਰਾਂ ਅਤੇ ਚਾਹ ਦੀਆਂ ਫੈਕਟਰੀਆਂ ਦੇ ਲਾਗੇ ਡਰਾਈਵ ਕਰਕੇ ਗਏ। ਉਹਨਾਂ ਨੇ ਕਾਰਾਂ ਗਿਣੀਆਂ ਅਤੇ ਗੀਤ ਗਾਏ।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
