--- a/stories/es/0006_anansi-y-la-sabiduría.html
+++ b/stories/es/0006_anansi-y-la-sabiduría.html
@@ -63,7 +63,7 @@ Cuento de Ghana<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>El codicioso Anansi pensó, “voy a mantener la vasija segura en la copa de un árbol alto. ¡Entonces la puedo tener toda para mi!”  Hiló un hilo largo, envolvió con él la vasija de barro, y lo ató a su estómago. Empezó a trepar el árbol. Pero era difícil trepar el árbol con la vasija pegándole en las rodillas todo el tiempo.</p>
+<p>El codicioso Anansi pensó, “voy a mantener la vasija segura en la copa de un árbol alto. ¡Entonces la puedo tener toda para mí!”  Hiló un hilo largo, envolvió con él la vasija de barro, y lo ató a su estómago. Empezó a trepar el árbol. Pero era difícil trepar el árbol con la vasija pegándole en las rodillas todo el tiempo.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
