--- a/stories/es/0087_me-gusta-leer.html
+++ b/stories/es/0087_me-gusta-leer.html
@@ -98,7 +98,7 @@ Letta Machoga<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/09.jpg" /></p>
 
-<p>¿Para quién puedo leer? ¡Puedo leer para mi mismo!</p>
+<p>¿Para quién puedo leer? ¡Puedo leer para mí mismo!</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
