--- a/stories/nl/0106_namukurus-fiets.html
+++ b/stories/nl/0106_namukurus-fiets.html
@@ -90,7 +90,7 @@ Munanga ASP teachers<br>Nederlands</div><div class="pagebreak">
 <p></div><div class="pagebreak"></p>
 
 <p><strong>Text:</strong> Munanga ASP teachers<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Thomas Depoortere<br /><strong>Language:</strong> Dutch</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/namukuru’s-bicycle">here</a>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/namu%E2%80%99s-bicycle">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
