--- a/stories/es/0006_anansi-y-la-sabiduría_slides.html
+++ b/stories/es/0006_anansi-y-la-sabiduría_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>El codicioso Anansi pensó, “voy a mantener la vasija segura en la copa de un árbol alto. ¡Entonces la puedo tener toda para mi!” Hiló un hilo largo, envolvió con él la vasija de barro, y lo ató a su estómago. Empezó a trepar el árbol. Pero era difícil trepar el árbol con la vasija pegándole en las rodillas todo el tiempo.</p>
+<p>El codicioso Anansi pensó, “voy a mantener la vasija segura en la copa de un árbol alto. ¡Entonces la puedo tener toda para mí!” Hiló un hilo largo, envolvió con él la vasija de barro, y lo ató a su estómago. Empezó a trepar el árbol. Pero era difícil trepar el árbol con la vasija pegándole en las rodillas todo el tiempo.</p>
 <center>
 <strong>3</strong>
 </center>
