--- a/stories/es/0087_me-gusta-leer_slides.html
+++ b/stories/es/0087_me-gusta-leer_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/09.jpg" /></p>
-<p>¿Para quién puedo leer? ¡Puedo leer para mi mismo!</p>
+<p>¿Para quién puedo leer? ¡Puedo leer para mí mismo!</p>
 <center>
 <strong>8</strong>
 </center>
