--- a/stories/nl/0011_nsangabisibe-en-mudduawulira.html
+++ b/stories/nl/0011_nsangabisibe-en-mudduawulira.html
@@ -104,7 +104,7 @@ Frista Nattabira<br>Nederlands</div><div class="pagebreak">
 <p></div><div class="pagebreak"></p>
 
 <p><strong>Text:</strong> Frista Nattabira<br /><strong>Illustrations:</strong> Wiehan de Jager, João Carlos Brito<br /><strong>Translation:</strong> Thomas Depoortere<br /><strong>Language:</strong> Dutch</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/nsangabisibe-n%E2%80%99-mudduawulira">here</a>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/father-and-son">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
