--- a/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ_slides.html
+++ b/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p>ਜਦ ਸਿਮਬੇਗਵਾਇਰ ਦੀ ਮਾਂ ਦੀ ਮੌਤ ਹੋ ਗਈ, ਉਹ ਬਹੁਤ ਹੀ ਉਦਾਸ ਸੀ। ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਨੇ ਆਪਣੀ ਧੀ ਦੀ ਵੱਧੀਆ ਸੰਭਾਲ ਕੀਤੀ। ਹੌਲੀ ਹੌਲੀ, ਉਹ ਸਿਮਬੇਗਵਾਇਰ ਦੀ ਮਾਂ ਬਿਨ੍ਹਾਂ ਮੁੜ ਖੁਸ਼ ਮਹਿਸੂਸ ਹੋਣ ਲੱਗੇ। ਹਰ ਸਵੇਰ ਉਹ ਬੈਠ ਕੇ ਆਉਣ ਵਾਲੇ ਦਿਨ ਬਾਰੇ ਗੱਲ-ਬਾਤ ਕਰਦੇ। ਹਰ ਸ਼ਾਮ ਉਹ ਇਕੱਠੇ ਖਾਣਾ ਬਣਾਉਂਦੇ। ਬਰਤਨ ਧੋਣ ਦੇ ਬਾਅਦ, ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਜੀ ਉਸ ਦੀ ਸਕੂਲ ਦੇ ਕੰਮ ਵਿੱਚ ਮਦਦ ਕਰਦੇ।</p>
+<p>ਜਦ ਸਿਮਬੇਗਵਾਇਰ ਦੀ ਮਾਂ ਦੀ ਮੌਤ ਹੋ ਗਈ, ਉਹ ਬਹੁਤ ਹੀ ਉਦਾਸ ਸੀ। ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਨੇ ਆਪਣੀ ਧੀ ਦੀ ਵੱਧੀਆ ਸੰਭਾਲ ਕੀਤੀ। ਹੌਲੀ ਹੌਲੀ, ਉਹ ਸਿਮਬੇਗਵਾਇਰ ਦੀ ਮਾਂ ਬਿਨਾ ਮੁੜ ਖੁਸ਼ ਮਹਿਸੂਸ ਹੋਣ ਲੱਗੇ। ਹਰ ਸਵੇਰ ਉਹ ਬੈਠ ਕੇ ਆਉਣ ਵਾਲੇ ਦਿਨ ਬਾਰੇ ਗੱਲ-ਬਾਤ ਕਰਦੇ। ਹਰ ਸ਼ਾਮ ਉਹ ਇਕੱਠੇ ਖਾਣਾ ਬਣਾਉਂਦੇ। ਬਰਤਨ ਧੋਣ ਦੇ ਬਾਅਦ, ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਜੀ ਉਸ ਦੀ ਸਕੂਲ ਦੇ ਕੰਮ ਵਿੱਚ ਮਦਦ ਕਰਦੇ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p>&quot;ਹੈਲੋ ਸਿਮਬੇਗਵਾਇਰ, ਤੁਹਾਡੇ ਪਿਤਾ ਨੇ ਮੈਨੂੰ ਤੁਹਾਡੇ ਬਾਰੇ ਬਹੁਤ ਕੁਝ ਦੱਸਿਆ ਹੈ,&quot; ਅਨੀਤਾ ਨੇ ਕਿਹਾ। ਪਰ ਉਸਨੇ ਨਾ ਹੀ ਮੁਸਕਰਾਇਆ ਅਤੇ ਨਾ ਹੀ ਲੜਕੀ ਦਾ ਹੱਥ ਫੜਿਆ। ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਜੀ ਖੁਸ਼ ਅਤੇ ਉਤਸ਼ਾਹਤ ਸੀ। ਉਸ ਨੇ ਉਹਨਾਂ ਤਿੰਨਾਂ ਦੇ ਇਕੱਠੇ ਰਹਿਣ ਬਾਰੇ ਗੱਲ ਕੀਤੀ, ਅਤੇ ਕਿਸ ਤਰ੍ਹਾਂ ਉਹਨ੍ਹਾਂ ਦਾ ਜੀਵਨ ਚੰਗਾ ਹੋਵੇਗਾ। &quot;ਮੇਰੇ ਬੱਚੇ, ਮੈਂ ਉਮੀਦ ਕਰਦਾ ਹਾਂ ਕਿ ਤੁਸੀਂ ਅਨੀਤਾ ਨੂੰ ਆਪਣੀ ਮਾਂ ਦੇ ਰੂਪ ਵਿੱਚ ਸਵੀਕਾਰ ਕਰੋਗੇ,&quot; ਉਹਨ੍ਹਾਂ ਨੇ ਕਿਹਾ।</p>
+<p>&quot;ਹੈਲੋ ਸਿਮਬੇਗਵਾਇਰ, ਤੁਹਾਡੇ ਪਿਤਾ ਨੇ ਮੈਨੂੰ ਤੁਹਾਡੇ ਬਾਰੇ ਬਹੁਤ ਕੁੱਝ ਦੱਸਿਆ ਹੈ,&quot; ਅਨੀਤਾ ਨੇ ਕਿਹਾ। ਪਰ ਉਸਨੇ ਨਾ ਹੀ ਮੁਸਕਰਾਇਆ ਅਤੇ ਨਾ ਹੀ ਲੜਕੀ ਦਾ ਹੱਥ ਫੜਿਆ। ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਜੀ ਖੁਸ਼ ਅਤੇ ਉਤਸਾਹਿਤ ਸੀ। ਉਸ ਨੇ ਉਹਨਾਂ ਤਿੰਨਾਂ ਦੇ ਇਕੱਠੇ ਰਹਿਣ ਬਾਰੇ ਗੱਲ ਕੀਤੀ, ਅਤੇ ਕਿਸ ਤਰ੍ਹਾਂ ਉਹਨ੍ਹਾਂ ਦਾ ਜੀਵਨ ਚੰਗਾ ਹੋਵੇਗਾ। &quot;ਮੇਰੇ ਬੱਚੇ, ਮੈਂ ਉਮੀਦ ਕਰਦਾ ਹਾਂ ਕਿ ਤੁਸੀਂ ਅਨੀਤਾ ਨੂੰ ਆਪਣੀ ਮਾਂ ਦੇ ਰੂਪ ਵਿੱਚ ਸਵੀਕਾਰ ਕਰੋਗੇ,&quot; ਉਹਨ੍ਹਾਂ ਨੇ ਕਿਹਾ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p>ਸਿਮਬੇਗਵਾਇਰ ਲਈ ਮਹੌਲ ਹੋਰ ਵੀ ਬਦਤਰ ਹੋ ਗਿਆ। ਜੇ ਉਹ ਕੰਮ ਖਤਮ ਨਾ ਕਰਦੀ ਜਾਂ ਉਹ ਸ਼ਿਕਾਇਤ ਕਰਦੀ ਤਾਂ ਅਨੀਤਾ ਉਸ ਨੂੰ ਮਾਰਦੀ ਸੀ। ਅਤੇ ਰਾਤ ਦੇ ਖਾਣੇ ਸਮੇਂ, ਉਹ ਔਰਤ ਸਾਰਾ ਭੋਜਨ ਖਾ ਲੈਂਦੀ ਸੀ ਅਤੇ ਸਿਮਬੇਗਵਾਇਰ ਨੂੰ ਸਿਰਫ ਕੁਝ ਕੁ ਟੁਕੜੇ ਛੱਡਦੀ ਸੀ। ਹਰ ਰਾਤ ਸਿਮਬੇਗਵਾਇਰ ਰੋਂਦੀ ਹੁੰਦੀ ਸੀ ਅਤੇ ਉਸ ਦੀ ਮਾਂ ਦੇ ਕੰਬਲ ਨੂੰ ਜੱਫੀ ਪਾਉਂਦੀ ਸੌਦੀ ਸੀ।</p>
+<p>ਸਿਮਬੇਗਵਾਇਰ ਲਈ ਮਹੌਲ ਹੋਰ ਵੀ ਬਦਤਰ ਹੋ ਗਿਆ। ਜੇ ਉਹ ਕੰਮ ਖਤਮ ਨਾ ਕਰਦੀ ਜਾਂ ਉਹ ਸ਼ਿਕਾਇਤ ਕਰਦੀ ਤਾਂ ਅਨੀਤਾ ਉਸ ਨੂੰ ਮਾਰਦੀ ਸੀ। ਅਤੇ ਰਾਤ ਦੇ ਖਾਣੇ ਸਮੇਂ, ਉਹ ਔਰਤ ਸਾਰਾ ਭੋਜਨ ਖਾ ਲੈਂਦੀ ਸੀ ਅਤੇ ਸਿਮਬੇਗਵਾਇਰ ਨੂੰ ਸਿਰਫ ਕੁੱਝ ਕੁ ਟੁਕੜੇ ਛੱਡਦੀ ਸੀ। ਹਰ ਰਾਤ ਸਿਮਬੇਗਵਾਇਰ ਰੋਂਦੀ ਹੁੰਦੀ ਸੀ ਅਤੇ ਉਸ ਦੀ ਮਾਂ ਦੇ ਕੰਬਲ ਨੂੰ ਜੱਫੀ ਪਾਉਂਦੀ ਸੌਂਦੀ ਸੀ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p>ਸਿਮਬੇਗਵਾਇਰ ਦੀ ਭੂਆ ਉਸ ਨੂੰ ਆਪਣੇ ਘਰੇ ਲੈ ਗਈ। ਉਸ ਨੇ ਸਿਮਬੇਗਵਾਇਰ ਨੂੰ ਗਰਮ ਭੋਜਨ ਦਿੱਤਾ ਅਤੇ ਉਸ ਨੂੰ ਉਸ ਦੀ ਮਾਂ ਦੇ ਕੰਬਲ ਨਾਲ ਮੰਜੇ ਵਿੱਚ ਸਜਾਇਆ। ਉਸ ਰਾਤ, ਸਿਮਬੇਗਵਾਇਰ ਰੋਂਦੀ ਰੋਂਦੀ ਸੋਈ। ਪਰ ਇਹ ਰਾਹਤ ਦੇ ਹੰਝੂ ਸਨ। ਉਸ ਨੂੰ ਪਤਾ ਸੀ ਕਿ ਉਸ ਦੀ ਭੂਆ ਉਸ ਦੀ ਦੇਖ-ਭਾਲ ਕਰੇਗੀ।</p>
+<p>ਸਿਮਬੇਗਵਾਇਰ ਦੀ ਭੂਆ ਉਸ ਨੂੰ ਆਪਣੇ ਘਰ ਲੈ ਗਈ। ਉਸ ਨੇ ਸਿਮਬੇਗਵਾਇਰ ਨੂੰ ਗਰਮ ਭੋਜਨ ਦਿੱਤਾ ਅਤੇ ਉਸ ਨੂੰ ਉਸ ਦੀ ਮਾਂ ਦੇ ਕੰਬਲ ਨਾਲ ਮੰਜੇ ਵਿੱਚ ਸਜਾਇਆ। ਉਸ ਰਾਤ, ਸਿਮਬੇਗਵਾਇਰ ਰੋਂਦੀ ਰੋਂਦੀ ਸੋਈ। ਪਰ ਇਹ ਰਾਹਤ ਦੇ ਹੰਝੂ ਸਨ। ਉਸ ਨੂੰ ਪਤਾ ਸੀ ਕਿ ਉਸ ਦੀ ਭੂਆ ਉਸ ਦੀ ਦੇਖ-ਭਾਲ ਕਰੇਗੀ।</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>ਜਦ ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਘਰ ਵਾਪਸ ਆਏ, ਉਹਨਾਂ ਨੇ ਉਸ ਦਾ ਕਮਰਾ ਖਾਲੀ ਪਾਇਆ। &quot;ਕੀ ਹੋਇਆ, ਅਨੀਤਾ?&quot; ਉਸ ਨੇ ਭਾਰੀ ਦਿਲ ਨਾਲ ਪੁੱਛਿਆ। ਉਸ ਔਰਤ ਨੇ ਸਮਝਾਇਆ ਕਿ ਸਿਮਬੇਗਵਾਇਰ ਭੱਜ ਗਈ ਹੈ। &quot;ਮੈਂ ਚਾਹੁੰਦੀ ਸੀ ਕਿ ਉਹ ਮੇਰੀ ਇੱਜ਼ਤ ਕਰੇ,&quot; ਉਸ ਨੇ ਕਿਹਾ। &quot;ਪਰ ਸ਼ਾਇਦ ਮੈਂ ਬਹੁਤ ਜਿਆਦਾ ਸਖਤ ਸੀ।&quot; ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਘਰੋ ਚਲੇ ਗਏ ਅਤੇ ਨਦੀ ਦੀ ਦਿਸ਼ਾ ਵੱਲ ਗਏ। ਉਹ ਆਪਣੀ ਭੈਣ ਦੇ ਪਿੰਡ ਵੱਲ ਪਤਾ ਕਰਨ ਲਈ ਗਏ ਜੇ ਉਸ ਨੇ ਸਿਮਬੇਗਵਾਇਰ ਨੂੰ ਵੇਖਿਆ ਹੈ।</p>
+<p>ਜਦ ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਘਰ ਵਾਪਸ ਆਏ, ਉਹਨਾਂ ਨੇ ਉਸ ਦਾ ਕਮਰਾ ਖਾਲੀ ਦੇਖਿਆ। &quot;ਕੀ ਹੋਇਆ, ਅਨੀਤਾ?&quot; ਉਸ ਨੇ ਭਾਰੀ ਦਿਲ ਨਾਲ ਪੁੱਛਿਆ। ਉਸ ਔਰਤ ਨੇ ਸਮਝਾਇਆ ਕਿ ਸਿਮਬੇਗਵਾਇਰ ਭੱਜ ਗਈ ਹੈ। &quot;ਮੈਂ ਚਾਹੁੰਦੀ ਸੀ ਕਿ ਉਹ ਮੇਰੀ ਇੱਜ਼ਤ ਕਰੇ,&quot; ਉਸ ਨੇ ਕਿਹਾ। &quot;ਪਰ ਸ਼ਾਇਦ ਮੈਂ ਬਹੁਤ ਜਿਆਦਾ ਸਖਤ ਸੀ।&quot; ਸਿਮਬੇਗਵਾਇਰ ਦੇ ਪਿਤਾ ਘਰੋ ਚਲੇ ਗਏ ਅਤੇ ਨਦੀ ਦੀ ਦਿਸ਼ਾ ਵੱਲ ਗਏ। ਉਹ ਆਪਣੀ ਭੈਣ ਦੇ ਪਿੰਡ ਵੱਲ ਪਤਾ ਕਰਨ ਲਈ ਗਏ ਜੇ ਉਸ ਨੇ ਸਿਮਬੇਗਵਾਇਰ ਨੂੰ ਵੇਖਿਆ ਹੈ।</p>
 <center>
 <strong>13</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>ਉਸ ਦੇ ਪਿਤਾ ਉਸ ਨੂੰ ਰੋਜ਼ ਮਿਲਣ ਆਉਂਦੇ। ਅਖੀਰ ਨੂੰ, ਉਹ ਅਨੀਤਾ ਦੇ ਨਾਲ ਆਏ। ਉਹ ਸਿਮਬੇਗਵਾਇਰ ਦਾ ਹੱਥ ਫੜਨ ਲਈ ਅੱਗੇ ਵਧੀ। “ਮੈਨੂੰ ਬਹੁਤ ਅਫ਼ਸੋਸ ਹੈ ਬੱਚੇ, ਮੈਂ ਗ਼ਲਤ ਸੀ,&quot; ਉਹ ਰੋਈ। &quot;ਕੀ ਤੂੰ ਮੈਨੂੰ ਮੁੜ ਕੋਸ਼ਿਸ ਕਰਨ ਦਾ ਮੌਕਾ ਦੇਵੇਂਗੀ?&quot; ਸਿਮਬੇਗਵਾਇਰ ਨੇ ਉਸ ਦੇ ਪਿਤਾ ਅਤੇ ਉਹਨਾ ਦੇ ਚਿੰਤਤ ਚਿਹਰੇ ਵਲ ਦੇਖਿਆ। ਫਿਰ ਉਸ ਨੇ ਹੌਲੀ ਹੌਲੀ ਅੱਗੇ ਕਦਮ ਰੱਖੇ ਅਤੇ ਅਨੀਤਾ ਨੂੰ ਜਫੀ ਪਾਈ।</p>
+<p>ਉਸ ਦੇ ਪਿਤਾ ਉਸ ਨੂੰ ਰੋਜ਼ ਮਿਲਣ ਆਉਂਦੇ। ਅਖੀਰ ਨੂੰ, ਉਹ ਅਨੀਤਾ ਦੇ ਨਾਲ ਆਏ। ਉਹ ਸਿਮਬੇਗਵਾਇਰ ਦਾ ਹੱਥ ਫੜਨ ਲਈ ਅੱਗੇ ਵਧੀ। “ਮੈਨੂੰ ਬਹੁਤ ਅਫ਼ਸੋਸ ਹੈ ਬੱਚੇ, ਮੈਂ ਗ਼ਲਤ ਸੀ,&quot; ਉਹ ਰੋਈ। &quot;ਕੀ ਤੂੰ ਮੈਨੂੰ ਮੁੜ ਕੋਸ਼ਿਸ ਕਰਨ ਦਾ ਮੌਕਾ ਦੇਵੇਂਗੀ?&quot; ਸਿਮਬੇਗਵਾਇਰ ਨੇ ਉਸ ਦੇ ਪਿਤਾ ਅਤੇ ਉਹਨਾ ਦੇ ਚਿੰਤਤ ਚਿਹਰੇ ਵਲ ਦੇਖਿਆ। ਫਿਰ ਉਸ ਨੇ ਹੌਲੀ ਹੌਲੀ ਅੱਗੇ ਕਦਮ ਰੱਖੇ ਅਤੇ ਅਨੀਤਾ ਨੂੰ ਜੱਫੀ ਪਾਈ।</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p>ਅਗਲੇ ਹਫ਼ਤੇ, ਅਨੀਤਾ ਨੇ ਸਿਮਬੇਗਵਾਇਰ, ਉਸਦੇ ਚਚੇਰੇ ਭੈਣ ਭਰਾਵਾਂ ਅਤੇ ਭੂਆ ਨੂੰ ਘਰ ਭੋਜਨ ਲਈ ਆਉਣ ਲਈ ਸੱਦਾ ਦਿੱਤਾ। ਕੀ ਦਾਵਤ ਸੀ! ਅਨੀਤਾ ਨੇ ਸਿਮਬੇਗਵਾਇਰ ਦਾ ਮਨਪਸੰਦ ਭੋਜਨ ਤਿਆਰ ਕੀਤਾ, ਅਤੇ ਹਰ ਕਿਸੇ ਨੇ ਪੇਟ ਭਰਕੇ ਖਾਧਾ। ਫਿਰ ਬੱਚੇ ਖੇਡੇ ਅਤੇ ਸਿਆਣਿਆਂ ਨੇ ਗੱਲਾਂ-ਬਾਤਾਂ ਕੀਤੀਆਂ। ਸਿਮਬੇਗਵਾਇਰ ਖੁਸ਼ ਅਤੇ ਬਹਾਦਰ ਮਹਿਸੂਸ ਕਰ ਰਹੀ ਸੀ। ਉਸ ਨੇ ਫੈਸਲਾ ਕੀਤਾ ਸੀ ਕਿ ਉਹ ਜਲਦੀ, ਬਹੁਤ ਜਲਦੀ, ਉਸ ਦੇ ਪਿਤਾ ਅਤੇ ਮਤਰੇਈ ਮਾਂ ਦੇ ਨਾਲ ਰਹਿਣ ਲਈ ਵਾਪਸ ਘਰ ਆਵੇਗੀ।</p>
+<p>ਅਗਲੇ ਹਫ਼ਤੇ, ਅਨੀਤਾ ਨੇ ਸਿਮਬੇਗਵਾਇਰ, ਉਸਦੇ ਚਚੇਰੇ ਭੈਣ ਭਰਾਵਾਂ ਅਤੇ ਭੂਆ ਨੂੰ ਘਰ ਭੋਜਨ ਲਈ ਆਉਣ ਲਈ ਸੱਦਾ ਦਿੱਤਾ। ਕੀ ਦਾਵਤ ਸੀ! ਅਨੀਤਾ ਨੇ ਸਿਮਬੇਗਵਾਇਰ ਦਾ ਮਨਪਸੰਦ ਭੋਜਨ ਤਿਆਰ ਕੀਤਾ, ਅਤੇ ਹਰ ਕਿਸੇ ਨੇ ਪੇਟ ਭਰਕੇ ਖਾਧਾ। ਫਿਰ ਬੱਚੇ ਖੇਡੇ ਅਤੇ ਸਿਆਣਿਆਂ ਨੇ ਗੱਲਾਂ-ਬਾਤਾਂ ਕੀਤੀਆਂ। ਸਿਮਬੇਗਵਾਇਰ ਖੁਸ਼ ਅਤੇ ਬਹਾਦਰ ਮਹਿਸੂਸ ਕਰ ਰਹੀ ਸੀ। ਉਸ ਨੇ ਫੈਸਲਾ ਕੀਤਾ ਸੀ ਕਿ ਉਹ ਬਹੁਤ ਜਲਦੀ ਉਸ ਦੇ ਪਿਤਾ ਅਤੇ ਮਤਰੇਈ ਮਾਂ ਦੇ ਨਾਲ ਰਹਿਣ ਲਈ ਵਾਪਸ ਘਰ ਆਵੇਗੀ।</p>
 <center>
 <strong>16</strong>
 </center>
